Bug: 102896 - localization check-ins for 8.7.0
Translations for our base 30 languages, except Japanese.

https://bugzilla.zimbra.com/show_bug.cgi?id=102896

Copied from Perforce
 Change: 561292

--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -478,6 +478,7 @@ OVP_related = Relateret
 OVP_recent = Seneste objekter
 OVP_allSearchResult = Alle resultater
 OVP_accountSearchResult = Konti
+OVP_aliasSearchResult = Aliasser
 OVP_domainSearchResult = Dom\u00e6ner
 OVP_searchOption = S\u00f8geindstillinger
 OVP_savedSearch = Gemte s\u00f8gninger
@@ -678,11 +679,15 @@ PQ_Delete_tt = Slet alle meddelelser i denne k\u00f8 p\u00e5 denne server
 
 Alert_MoreResultsAvailable = Fandt over {0} resultater.<br/> Indskr\u00e6nk s\u00f8gningen. 
 Alert_ServerDetails = <b>Bem\u00e6rk:</b> Indstillinger p\u00e5 en individuel server tilsides\u00e6tter globale indstillinger.
-Alert_GlobalConfig = <b>Bem\u00e6rk:</b> Indstillinger g\u00f8r sig kun g\u00e6ldende for servere, der har de(n) relevante tjeneste(r)installeret og aktiveret. Serverindstillinger tilsides\u00e6tter globale indstillinger.
+Alert_GlobalConfig = \
+    <b>Bem\u00e6rk:</b> \
+    Indstillinger kan kun anvendes p\u00e5 servere, som har de(n) relevante tjeneste(r) \
+    installeret og aktiveret. Indstillinger, som er anvendt p\u00e5 servere, dom\u00e6ner og tjenesteklasser, tilsides\u00e6tter globale indstillinger.
 Alert_ServerRestart = \
 	<b>Advarsel:</b> \
 	\u00c6ndringer til indstillinger kr\u00e6ver genstart af server, f\u00f8r de tr\u00e6der i kraft.
-Alert_ProxyConfig = <b>Bem\u00e6rk:</b> Kan kun konfigureres, n\u00e5r proxy er installeret og aktiveret. \u00c6ndringer af indstillinger kr\u00e6ver genstart af proxy, f\u00f8r de tr\u00e6der i kraft.
+Alert_ProxyConfig = \
+    <b>Advarsel:</b> \u00c6ndringer til disse indstillinger kr\u00e6ver proxygenstart for at tr\u00e6de i kraft.
 Alert_AmavisdRestart = <b>Bem\u00e6rk:</b> \u00c6ndringer af indstillinger kr\u00e6ver genstart af amavisd, f\u00f8r de tr\u00e6der i kraft.
 Alert_HSM = <b>Bem\u00e6rk:</b> Du kan iv\u00e6rks\u00e6tte en HSM-session manuelt ved at klikke p\u00e5 knappen \u201eStart HSM-session\u201c. HSM-sessioner kan ogs\u00e5 planl\u00e6gges p\u00e5 servere gennem cron-jobs. <br>
 Alert_InternalPassword = <b>Bem\u00e6rk:</b> Disse indstillinger p\u00e5virker ikke de adgangskoder, som er angivet af brugerei dom\u00e6ner, som er konfigureret til at bruge ekstern godkendelse.
@@ -831,7 +836,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = Anti-virus
 NAD_Service_AntiSpam = Anti-spam
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = Logger
 NAD_Service_Spell = Stavekontrol
 NAD_Service_Imapproxy = Omvendt proxy
@@ -1207,6 +1211,7 @@ NAD_MailOptions = Indstillinger for mail
 NAD_MailOptionsStandardClient = Standardklient (HTML)
 NAD_ContactsOptions = Indstillinger for kontaktpersoner
 NAD_CalendarOptions = Indstillinger for kalender
+NAD_ChatOptions = Indstillinger for chat
 NAD_MailOptionsSending = Sending af mail
 NAD_MailOptionsReceiving = Modtagelse af mail
 NAD_MailOptionsComposing = Skrivning af mail
@@ -1345,7 +1350,7 @@ NAD_zimbraSearchFeature = S\u00f8gefunktioner
 LBL_zimbraFeatureNotebookEnabled = Dokumenter
 LBL_zimbraFeatureBriefcasesEnabled = Dokumentmappe
 LBL_zimbraFeatureHtmlComposeEnabled = HTML-skrivning
-LBL_zimbraFeatureChatEnabled = Instant Messenger
+LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = \u00d8jeblikkelige adviseringer
 LBL_zimbraPrefIMAutoLogin = Automatisk login p\u00e5 IM-tjenester
 NAD_Feature = Funktion: 
@@ -1469,6 +1474,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Vis tidszoneliste i aftalevisning
 LBL_zimbraPrefImapSearchFoldersEnabled = Vis IMAP-s\u00f8gemapper
 LBL_zimbraPrefMailForwardingAddress = Brugerspecificerede videresendelsesadresser:
 LBL_zimbraPrefMailForwardingAddressMsg = Brugerspecificerede videresendelsesadresser
+LBL_zimbraPrefChatPlaySound = Afspil adviseringslyd
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Der skal mindst angives en videresendelsesadresse, n\u00e5r du v\u00e6lger ikke at beholde lokale kopier af meddelelser.
 
@@ -1754,6 +1760,7 @@ ERROR_DL_NAME_INVALID = Det angivne navn p\u00e5 distributionslisten er ugyldigt
 ERROR_INVALID_VOLUME_PATH = Den angivne enhedssti er ugyldig!
 ERROR_NO_SUCH_VOLUME = Den angivne enhed findes ikke!
 ERROR_VOLUME_ALREADY_EXISTS = Den angivne enhed findes allerede!
+ERROR_MAX_ACCOUNT_QUOTA = Ugyldig v\u00e6rdi for kontokvote! Kontokvote overstiger den maksimale kvote for mail, som dom\u00e6neadministratoren kan angive for en bruger.
 
 ERROR_LICENSE = Der opstod en licensfejl 
 ERROR_NO_VALID_SUBNETS = Fejl! V\u00e6rdien {0} er ikke en gyldig liste over subnet. Se dokumentationen for at f\u00e5 hj\u00e6lp til at konfigurere MTA-betroede netv\u00e6rker. <br/>Yderligere oplysninger om konfiguration af MTA-betroede netv\u00e6rker findes p\u00e5 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2669,3 +2676,11 @@ ERROR_InvalidRPLifetime = Omr\u00e5det skal v\u00e6r et positivt heltal.
 ERROR_RPExists = Politik "{0}" findes allerede.
 multiple_servers = flere servere
 
+Two_Factor_Authentication = Tofaktorgodkendelse
+LBL_Two_Step_Authentication = Totrinsgodkendelse
+LBL_Enable_Two_Factor_Authentication = Aktiv\u00e9r tofaktorgodkendelse
+LBL_Two_Factor_Authentication_Active = Aktiv
+LBL_Require_Two_Step_Authentication = Kr\u00e6v totrinsgodkendelse
+LBL_Number_Of_One_Time_Codes = Antal engangskoder, som skal genereres:
+MSG_Number_Of_One_Time_Codes = Antal engangskoder, som skal genereres
+LBL_Enable_Application_Passcodes = Aktiv\u00e9r applikationsadgangskoder
