--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -482,6 +482,7 @@ OVP_related = Verwandte
 OVP_recent = Aktuelle Objekte
 OVP_allSearchResult = Alle Ergebnisse
 OVP_accountSearchResult = Accounts
+OVP_aliasSearchResult = Aliasnamen
 OVP_domainSearchResult = Domains
 OVP_searchOption = Suchoptionen
 OVP_savedSearch = Gespeicherte Suchabfragen
@@ -682,16 +683,15 @@ PQ_Delete_tt = Alle Mails in dieser Warteschlange auf diesem Server l\u00f6schen
 
 Alert_MoreResultsAvailable = \u00dcber {0} Ergebnisse.<br/> Bitte grenzen Sie Ihre Suche ein. 
 Alert_ServerDetails = <b>Hinweis:</b> Einstellungen auf einem einzelnen Server \u00fcberschreiben globale Einstellungen.
-Alert_GlobalConfig = <b>Hinweis:</b> \
-Die Einstellungen gelten nur f\u00fcr Server, auf denen die entsprechenden\
- Dienste installiert und aktiviert sind. Die Servereinstellungen \u00fcberschreiben\
- globale Einstellungen.
+Alert_GlobalConfig = \
+    <b>Hinweis:</b> \
+    Die Einstellungen gelten nur f\u00fcr Server, auf denen die entsprechenden Dienste \
+ installiert und aktiviert sind. F\u00fcr Server, Domains und Klassen vorgenommene Einstellungen \u00fcbersteuern die globalen Einstellungen.
 Alert_ServerRestart = \
 	<b>Warnung:</b> \
 	Die ge\u00e4nderten Einstellungen werden erst nach einem Neustart des Servers wirksam.
 Alert_ProxyConfig = \
-	<b>Hinweis:</b> \
-	Nur konfigurierbar, wenn der Proxy installiert und aktiviert ist. Ge\u00e4nderte Einstellungen werden erst nach einem Neustart des Proxys wirksam.
+    <b>Warnung:</b> F\u00fcr die \u00c4nderungen an diesen Einstellungen ist ein Proxy-Neustart erforderlich.
 Alert_AmavisdRestart = \
 	<b>Hinweis:</b> \
 	Ge\u00e4nderte Einstellungen werden erst nach einem Neustart von amavisd wirksam.
@@ -845,7 +845,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = Antivirus
 NAD_Service_AntiSpam = Antispam
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = Logger
 NAD_Service_Spell = Rechtschreibpr\u00fcfung
 NAD_Service_Imapproxy = Reverse-Proxy
@@ -1221,6 +1220,7 @@ NAD_MailOptions = Mail-Optionen
 NAD_MailOptionsStandardClient = Standard-Client (HTML)
 NAD_ContactsOptions = Kontaktoptionen
 NAD_CalendarOptions = Kalenderoptionen
+NAD_ChatOptions = Chat-Optionen
 NAD_MailOptionsSending = Mail senden
 NAD_MailOptionsReceiving = Mail empfangen
 NAD_MailOptionsComposing = Mail verfassen
@@ -1359,7 +1359,7 @@ NAD_zimbraSearchFeature = Suchfunktionen
 LBL_zimbraFeatureNotebookEnabled = Notizen
 LBL_zimbraFeatureBriefcasesEnabled = Dateien
 LBL_zimbraFeatureHtmlComposeEnabled = In HTML verfassen
-LBL_zimbraFeatureChatEnabled = Instant Messenger
+LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = Unmittelbare Benachrichtigungen
 LBL_zimbraPrefIMAutoLogin = Automatisch bei Instant Messenger anmelden
 NAD_Feature = Funktion: 
@@ -1483,6 +1483,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Liste der Zeitzonen in Terminansicht
 LBL_zimbraPrefImapSearchFoldersEnabled = IMAP-Suchordner anzeigen
 LBL_zimbraPrefMailForwardingAddress = Vom Nutzer angegebene Weiterleitungsadressen:
 LBL_zimbraPrefMailForwardingAddressMsg = Vom Nutzer angegebene Weiterleitungsadressen
+LBL_zimbraPrefChatPlaySound = Benachrichtigungston wiedergeben
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Mindestens eine Weiterleitungsadresse muss angegeben werden, wenn Sie keine lokalen Kopien der Mails behalten m\u00f6chten.
 
@@ -1768,6 +1769,7 @@ ERROR_DL_NAME_INVALID = Der angegebene Verteilername ist ung\u00fcltig.
 ERROR_INVALID_VOLUME_PATH = Der angegebene Datentr\u00e4gerpfad ist ung\u00fcltig!
 ERROR_NO_SUCH_VOLUME = Der angegebene Datentr\u00e4ger existiert nicht!
 ERROR_VOLUME_ALREADY_EXISTS = Der angegebene Datentr\u00e4ger existiert bereits!
+ERROR_MAX_ACCOUNT_QUOTA = Ung\u00fcltiger Wert f\u00fcr Accountkontingent! Das Accountkontingent \u00fcberschreitet das maximale E-Mail-Kontingent, das der Domain-Administrator f\u00fcr einen Benutzer einstellen kann.
 
 ERROR_LICENSE = Lizenzfehler 
 ERROR_NO_VALID_SUBNETS = Fehler! Der Wert {0} ist keine g\u00fcltige Liste mit Subnetzen. Bitte lesen Sie in der Dokumentation nach, wie Sie MTA Trusted Networks konfigurieren. <br/>Weitere Informationen zur Konfiguration von MTA Trusted Networks finden Sie unter <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2738,3 +2740,11 @@ ERROR_InvalidRPLifetime = Der Bereich muss eine positive ganze Zahl sein.
 ERROR_RPExists = Die Regel "{0}" ist bereits vorhanden.
 multiple_servers = mehrere Server
 
+Two_Factor_Authentication = Zwei-Faktor-Authentifizierung
+LBL_Two_Step_Authentication = Zweistufige Authentifizierung
+LBL_Enable_Two_Factor_Authentication = Zwei-Faktor-Authentifizierung aktivieren
+LBL_Two_Factor_Authentication_Active = Aktiv
+LBL_Require_Two_Step_Authentication = Zweistufige Authentifizierung erforderlich
+LBL_Number_Of_One_Time_Codes = Anzahl zu generierender Einmalcodes:
+MSG_Number_Of_One_Time_Codes = Anzahl zu generierender Einmalcodes
+LBL_Enable_Application_Passcodes = Passcodes f\u00fcr die Anwendung aktivieren
