--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -483,6 +483,7 @@ OVP_related = Relacionado
 OVP_recent = Objetos recientes
 OVP_allSearchResult = Todos los resultados
 OVP_accountSearchResult = Cuentas
+OVP_aliasSearchResult = Alias
 OVP_domainSearchResult = Dominios
 OVP_searchOption = Opciones de b\u00fasqueda
 OVP_savedSearch = B\u00fasquedas guardadas
@@ -687,14 +688,14 @@ Alert_MoreResultsAvailable = Se han encontrado m\u00e1s de {0} resultados.<br/> 
 Alert_ServerDetails = \
  <b>Nota:</b> La configuraci\u00f3n del servidor individual tendr\u00e1 preferencia sobre la configuraci\u00f3n general.
 Alert_GlobalConfig = \
- <b>Note:</b> \
-La configuraci\u00f3n s\u00f3lo se aplica a los servidores que tienen los servicios adecuados instalados y activados. La configuraci\u00f3n del servidor anula la configuraci\u00f3n general.
+    <b>Nota:</b> \
+    La configuraci\u00f3n solo se aplica a los servidores que tienen los servicios \
+ adecuados instalados y activados. La configuraci\u00f3n aplicada a los servidores, dominios y clases de servicios sobrescribe la configuraci\u00f3n general.
 Alert_ServerRestart = \
 	<b>Advertencia:</b> \
 	Para que los cambios en la configuraci\u00f3n surtan efecto, es necesario reiniciar.
 Alert_ProxyConfig = \
-	<b>Nota:</b> \
-	Solo se puede configurar cuando el proxy est\u00e1 instalado y activado. Para que los cambios en la configuraci\u00f3n surtan efecto, es necesario reiniciar el proxy.
+    <b>Advertencia:</b> Los cambios en la configuraci\u00f3n requieren el reinicio del proxy para surtir efecto.
 Alert_AmavisdRestart = \
 	<b>Nota:</b> \
 	Para que los cambios en la configuraci\u00f3n surtan efecto, es necesario reiniciar amavisd.
@@ -848,7 +849,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = Antivirus
 NAD_Service_AntiSpam = Antispam
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = Registrador
 NAD_Service_Spell = Corrector ortogr\u00e1fico
 NAD_Service_Imapproxy = Proxy inverso
@@ -1224,6 +1224,7 @@ NAD_MailOptions = Opciones de correo
 NAD_MailOptionsStandardClient = Versi\u00f3n est\u00e1ndar (HTML)
 NAD_ContactsOptions = Opciones de Contactos
 NAD_CalendarOptions = Opciones de Agenda
+NAD_ChatOptions = Opciones de chat
 NAD_MailOptionsSending = Correo saliente
 NAD_MailOptionsReceiving = Correo entrante
 NAD_MailOptionsComposing = Redactar correo
@@ -1362,7 +1363,7 @@ NAD_zimbraSearchFeature = Funciones de b\u00fasqueda
 LBL_zimbraFeatureNotebookEnabled = Bloc de notas
 LBL_zimbraFeatureBriefcasesEnabled = Malet\u00edn
 LBL_zimbraFeatureHtmlComposeEnabled = Redactar en HTML
-LBL_zimbraFeatureChatEnabled = Messenger
+LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = Alertas
 LBL_zimbraPrefIMAutoLogin = Iniciar sesi\u00f3n autom\u00e1ticamente en Messenger
 NAD_Feature = Funci\u00f3n: 
@@ -1486,6 +1487,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Mostrar la lista de zonas horarias en 
 LBL_zimbraPrefImapSearchFoldersEnabled = Mostrar carpetas de b\u00fasqueda de IMAP
 LBL_zimbraPrefMailForwardingAddress = Direcciones de reenv\u00edo especificadas por el usuario:
 LBL_zimbraPrefMailForwardingAddressMsg = Direcciones de reenv\u00edo especificadas por el usuario
+LBL_zimbraPrefChatPlaySound = Reproducir sonido de notificaci\u00f3n
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Debe especificarse al menos una direcci\u00f3n de reenv\u00edo si se elige no guardar ninguna copia de los mensajes localmente.
 
@@ -1775,6 +1777,7 @@ ERROR_DL_NAME_INVALID = El nombre de la lista de distribuci\u00f3n especificado 
 ERROR_INVALID_VOLUME_PATH = La ruta del volumen especificada no es v\u00e1lida.
 ERROR_NO_SUCH_VOLUME = El volumen especificado no existe.
 ERROR_VOLUME_ALREADY_EXISTS = El volumen especificado ya existe.
+ERROR_MAX_ACCOUNT_QUOTA = \u00a1Valor no v\u00e1lido para el espacio de almacenamiento de la cuenta! El espacio de almacenamiento de la cuenta supera el espacio m\u00e1ximo de correo que el administrador del dominio puede establecer para un usuario.
 
 ERROR_LICENSE = Se ha detectado un error de licencia 
 ERROR_NO_VALID_SUBNETS = \u00a1Error! El valor {0} no es una lista v\u00e1lida de subredes. Consulta la documentaci\u00f3n para obtener informaci\u00f3n sobre la configuraci\u00f3n de las redes MTA Trusted Networks. <br/>Encontrar\u00e1s m\u00e1s informaci\u00f3n sobre la configuraci\u00f3n de redes MTA Trusted Networks en <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2747,3 +2750,11 @@ ERROR_InvalidRPLifetime = El rango debe ser un n\u00famero entero positivo.
 ERROR_RPExists = La pol\u00edtica "{0}" ya existe.
 multiple_servers = servidores m\u00faltiples
 
+Two_Factor_Authentication = Autenticaci\u00f3n de dos factores
+LBL_Two_Step_Authentication = Autenticaci\u00f3n de dos pasos
+LBL_Enable_Two_Factor_Authentication = Activar autenticaci\u00f3n de dos factores
+LBL_Two_Factor_Authentication_Active = Activa
+LBL_Require_Two_Step_Authentication = Requiere autenticaci\u00f3n de dos pasos
+LBL_Number_Of_One_Time_Codes = N\u00famero de c\u00f3digos para un solo acceso para generar:
+MSG_Number_Of_One_Time_Codes = N\u00famero de c\u00f3digos para un solo acceso para generar
+LBL_Enable_Application_Passcodes = Activar c\u00f3digos de acceso de la aplicaci\u00f3n
