--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -483,6 +483,7 @@ OVP_related = Loturikoak
 OVP_recent = Azken objektuak
 OVP_allSearchResult = Emaitza guztiak
 OVP_accountSearchResult = Kontuak
+OVP_aliasSearchResult = Ezizenak
 OVP_domainSearchResult = Domeinuak
 OVP_searchOption = Bilaketa-aukerak
 OVP_savedSearch = Gordetako bilaketak
@@ -689,15 +690,14 @@ Alert_MoreResultsAvailable = {0} emaitza baino gehiago aurkitu dira.<br/> Zehazt
 Alert_ServerDetails = \
 	<b>Oharra:</b> Banakako zerbitzariaren ezarpenek ezarpen orokorrak gainidatzi dituzte.
 Alert_GlobalConfig = \
-	<b>Oharra:</b> \
-	Ezarpenak soilik aplika daitezke, baldin eta zerbitzariek \
- zerbitzu egokiak badituzte. Zerbitzariaren konfigurazioak konfigurazio orokorra deuseztatzen du.
+    <b>Oharra:</b> \
+    Zerbitzu egokiak instalatuta eta gaituta dituzten zerbitzariei soilik \
+    aplikatzen zaizkie ezarpenak. Zerbitzariei, domeinuei eta zerbitzu klaseei aplikatutako ezarpenek ezarpen orokorrak ordezten dituzte.
 Alert_ServerRestart = \
 	<b>Oharra:</b> \
 	Ezarpenak aldatu eta aplikatzeko, zerbitzaria berrabiarazi behar da.
 Alert_ProxyConfig = \
-	<b>Oharra:</b> \
-	Konfiguratu ahal izateko, aurretik proxya instalatu eta aktibatu behar da. Ezarpenak aldatzeko, proxya berrabiarazi behar da.
+    <b>Oharra:</b> Ezarpenak aldatzeko, proxy-a berrabiarazi behar da.
 Alert_AmavisdRestart = \
 	<b>Oharra:</b> \
 	Ezarpenak aldatu eta aplikatzeko, amavisd berrabiarazi behar da.
@@ -831,7 +831,7 @@ PQ_Q_HOLD_MESSAGES2 = Ziur ondorengo mezuak atxiki nahi dituzula?
 PQ_Q_RELEASE_MESSAGES2 = Ziur ondorengo mezuak desblokeatu nahi dituzula?
 PQ_Q_DELETE_MESSAGES2 = Ziur ondorengo mezuak ezabatu nahi dituzula?
 
-#PQ_SelectedMessages = Hautatutako mezuak ({0} mezu)
+#PQ_SelectedMessages = Selected messages ({0} message(s))
 PQ_SelectedMessages = Hautatutako mezuak ({0,number} {0,choice,1#mezu|2#mezu})
 PQ_FilteredSet = Multzo iragazia ({0})
 PQ_AllMessages = mezu guztiak
@@ -1065,7 +1065,6 @@ NAD_MailTransport = Posta-garraioa:
 NAD_MailTransportGrouper = Posta-garraioa
 ERROR_MAILTRANSPORT_INVALID = LMTP edo SMTP garraio definizio ez baliagarria
 MSG_MailTransportMessage = Honako hauek dira garraio-formatuak:  "protocol":"server":"port".  Esaterako, smtp:smtp.zimbrasmtpserver.com:25 
- 
 NAD_AccountName = Kontu-izena:
 NAD_Email = Helbide elektronikoa:
 NAD_Account = Kontua
@@ -1234,6 +1233,7 @@ NAD_MailOptions = Posta-aukerak
 NAD_MailOptionsStandardClient = Bertsio estandarra (HTML)
 NAD_ContactsOptions = Kontaktuen aukerak
 NAD_CalendarOptions = Agendako aukerak
+NAD_ChatOptions = Txataren aukerak
 NAD_MailOptionsSending = Irteerako posta
 NAD_MailOptionsReceiving = Sarrerako posta
 NAD_MailOptionsComposing = Mezua prestatzea
@@ -1367,12 +1367,12 @@ NAD_zimbraGeneralFeature = Funtzio orokorrak
 NAD_zimbraMailFeature = Posta-funtzioak
 NAD_zimbraContactFeature = Kontaktu-informazioa
 NAD_zimbraCalendarFeature = Agendaren funtzioak
-NAD_zimbraChatFeature = Berehalako mezularitzako funtzioak
+NAD_zimbraChatFeature = IM eginbideak
 NAD_zimbraSearchFeature = Bilaketa-funtzioak
 LBL_zimbraFeatureNotebookEnabled = Dokumentuak
 LBL_zimbraFeatureBriefcasesEnabled = Maleta
 LBL_zimbraFeatureHtmlComposeEnabled = Mezua prestatzea HTMLn
-LBL_zimbraFeatureChatEnabled = Messenger
+LBL_zimbraFeatureChatEnabled = Txata
 LBL_zimbraFeatureInstantNotify = Alertak
 LBL_zimbraPrefIMAutoLogin = Hasi saioa automatikoki Messenger-en
 NAD_Feature = Funtzioa: 
@@ -1496,6 +1496,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Bistaratu ordu-zonen zerrenda hitzordu
 LBL_zimbraPrefImapSearchFoldersEnabled = Bistaratu IMAPeko bilaketa-karpetak
 LBL_zimbraPrefMailForwardingAddress = Erabiltzaileak zehaztutako birbidalketa-helbideak:
 LBL_zimbraPrefMailForwardingAddressMsg = Erabiltzaileak zehaztutako birbidalketa-helbideak
+LBL_zimbraPrefChatPlaySound = Erreproduzitu jakinarazpenaren soinua
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Gutxienez, hartzaile-helbide bat idatzi behar da, tokiko kopiak ez gordetzeko aukeratzen denean.
 
@@ -1788,6 +1789,7 @@ ERROR_DL_NAME_INVALID = Banaketa-zerrendarako zehaztutako izena ez da baliozkoa.
 ERROR_INVALID_VOLUME_PATH = Balioa ez da baliozkoa honetarako:
 ERROR_NO_SUCH_VOLUME = Zehaztutako domeinua ez dago.
 ERROR_VOLUME_ALREADY_EXISTS = Zehaztutako bolumena jada badago.
+ERROR_MAX_ACCOUNT_QUOTA = Kontuaren kuotak ez du balio. Kontuaren kuotak gainditu egiten du domeinuaren administratzaileak erabiltzaileei gehienez ezar diezaiekeen posta-kuota.
 
 ERROR_LICENSE = Lizentzia-errore bat hauteman da 
 ERROR_NO_VALID_SUBNETS = Errorea! {0} balioa ez da azpisareen baliozko zerrenda bat. Kontsultatu MTA Trusted Networks sareen konfigurazioari buruzko informazioa lortzeko dokumentazioa. <br/>Hemen aurkituko duzu MTA Trusted Networks sareen konfigurazioari buruzko informazio gehiago:<a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>
@@ -2765,3 +2767,11 @@ ERROR_InvalidRPLifetime = Zehaztutako bolumen-bidea ez da baliozkoa
 ERROR_RPExists = "{0}" politika ez dago.
 multiple_servers = zerbitzari anitzak
 
+Two_Factor_Authentication = Bi faktoreko autentifikazioa
+LBL_Two_Step_Authentication = Bi urratseko autentifikazioa
+LBL_Enable_Two_Factor_Authentication = Gaitu bi faktoreko autentifikazioa
+LBL_Two_Factor_Authentication_Active = Aktibo
+LBL_Require_Two_Step_Authentication = Eskatu bi urratseko autentifikazioa
+LBL_Number_Of_One_Time_Codes = Sortu beharreko erabilera bakarreko kodeen kopurua:
+MSG_Number_Of_One_Time_Codes = Sortu beharreko erabilera bakarreko kodeen kopurua
+LBL_Enable_Application_Passcodes = Gaitu aplikazioaren pasakodeak
