--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -485,6 +485,7 @@ OVP_related = Associ\u00e9
 OVP_recent = Objets r\u00e9cents
 OVP_allSearchResult = Tous les r\u00e9sultats
 OVP_accountSearchResult = Comptes
+OVP_aliasSearchResult = Alias
 OVP_domainSearchResult = Domaines
 OVP_searchOption = Options de recherche
 OVP_savedSearch = Recherches enregistr\u00e9es
@@ -690,14 +691,14 @@ Alert_MoreResultsAvailable = Nombre de r\u00e9sultats sup\u00e9rieur \u00e0\u00a
 Alert_ServerDetails = \
  <b>Remarque\u00a0:</b> les param\u00e8tres d'un serveur donn\u00e9 ont priorit\u00e9 sur les param\u00e8tres globaux.
 Alert_GlobalConfig = \
- <b>Remarque\u00a0:</b> \
-Les param\u00e8tres s'appliquent uniquement aux serveurs sur lesquels le ou les services appropri\u00e9s ont \u00e9t\u00e9 install\u00e9s et activ\u00e9s. Les param\u00e8tres du serveur ont priorit\u00e9 sur les param\u00e8tres globaux.
+    <b>Remarque\u00a0:</b> \
+    Les param\u00e8tres s'appliquent uniquement aux serveurs sur lesquels le ou les services appropri\u00e9s \
+ ont \u00e9t\u00e9 install\u00e9s et activ\u00e9s. Les param\u00e8tres appliqu\u00e9s aux serveurs, noms de domaine et classes de service remplacent les param\u00e8tres globaux.
 Alert_ServerRestart = \
 	<b>Attention\u00a0:</b> \
 	pour appliquer les modifications apport\u00e9es aux param\u00e8tres, vous devez red\u00e9marrer le serveur.
 Alert_ProxyConfig = \
-	<b>Remarque\u00a0:</b> \
-	configurable uniquement lorsque le proxy est install\u00e9 et activ\u00e9. Il est n\u00e9cessaire de red\u00e9marrer le proxy pour appliquer les modifications des param\u00e8tres.
+    <b>Attention\u00a0:</b> Pour appliquer les modifications apport\u00e9es \u00e0 ces param\u00e8tres, vous devez red\u00e9marrer le serveur proxy.
 Alert_AmavisdRestart = \
 	<b>Remarque\u00a0:</b> \
 	 il est n\u00e9cessaire de red\u00e9marrer amavisd pour appliquer les modifications des param\u00e8tres.
@@ -851,7 +852,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = Antivirus
 NAD_Service_AntiSpam = Anti-spam
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = Journalisation
 NAD_Service_Spell = V\u00e9rificateur d'orthographe
 NAD_Service_Imapproxy = Proxy inverse
@@ -1227,6 +1227,7 @@ NAD_MailOptions = Options mail
 NAD_MailOptionsStandardClient = Client standard (HTML)
 NAD_ContactsOptions = Options des contacts
 NAD_CalendarOptions = Options d'agenda
+NAD_ChatOptions = Options du chat
 NAD_MailOptionsSending = Envoi de mail
 NAD_MailOptionsReceiving = R\u00e9ception de mail
 NAD_MailOptionsComposing = Cr\u00e9ation de mail
@@ -1360,12 +1361,12 @@ NAD_zimbraGeneralFeature = Fonctions g\u00e9n\u00e9rales
 NAD_zimbraMailFeature = Fonctions de messagerie
 NAD_zimbraContactFeature = Fonctions relatives aux contacts
 NAD_zimbraCalendarFeature = Fonctions de calendrier
-NAD_zimbraChatFeature = Fonctions IM
+NAD_zimbraChatFeature = Fonctionnalit\u00e9s de Messenger
 NAD_zimbraSearchFeature = Fonctions de recherche
 LBL_zimbraFeatureNotebookEnabled = Documents
 LBL_zimbraFeatureBriefcasesEnabled = Porte-documents
 LBL_zimbraFeatureHtmlComposeEnabled = \u00c9criture en HTML\u00a0:
-LBL_zimbraFeatureChatEnabled = Messenger
+LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = Notifications instantan\u00e9es
 LBL_zimbraPrefIMAutoLogin = Connexion automatique aux services IM
 NAD_Feature = Fonction\u00a0: 
@@ -1489,6 +1490,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Afficher la liste de fuseaux horaires 
 LBL_zimbraPrefImapSearchFoldersEnabled = Afficher les dossiers de recherche IMAP
 LBL_zimbraPrefMailForwardingAddress = Adresses de redirection saisies par l'utilisateur\u00a0:
 LBL_zimbraPrefMailForwardingAddressMsg = Adresses de redirection saisies par l'utilisateur
+LBL_zimbraPrefChatPlaySound = \u00c9mettre un son pour les notifications
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Si vous d\u00e9cidez de ne pas conserver une copie locale de vos mails, vous devez sp\u00e9cifier au moins une adresse de transfert.
 
@@ -1775,6 +1777,7 @@ ERROR_DL_NAME_INVALID = Le nom donn\u00e9 au groupe est incorrect.
 ERROR_INVALID_VOLUME_PATH = Le chemin de volume sp\u00e9cifi\u00e9 est incorrect\u00a0!
 ERROR_NO_SUCH_VOLUME = Le volume sp\u00e9cifi\u00e9 n'existe pas.
 ERROR_VOLUME_ALREADY_EXISTS = Le volume sp\u00e9cifi\u00e9 existe d\u00e9j\u00e0.
+ERROR_MAX_ACCOUNT_QUOTA = Valeur de quota de compte incorrecte. Le quota de ce compte de messagerie d\u00e9passe le quota maximum de mails que l'administrateur du domaine peut allouer \u00e0 un utilisateur.
 
 ERROR_LICENSE = Erreur de licence 
 ERROR_NO_VALID_SUBNETS = Erreur \u2013 La valeur {0} ne correspond pas \u00e0 une liste correcte de sous-r\u00e9seaux. Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, reportez-vous \u00e0 la documentation. <br/>Vous pouvez \u00e9galement consulter la page suivante\u00a0: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2748,3 +2751,11 @@ ERROR_InvalidRPLifetime = La plage doit \u00eatre un nombre entier positif.
 ERROR_RPExists = La r\u00e8gle \u00ab\u00a0{0}\u00a0\u00bb existe d\u00e9j\u00e0.
 multiple_servers = serveurs multiples
 
+Two_Factor_Authentication = Authentification \u00e0 deux facteurs
+LBL_Two_Step_Authentication = Authentification en deux \u00e9tapes
+LBL_Enable_Two_Factor_Authentication = Activer l'authentification \u00e0 deux facteurs
+LBL_Two_Factor_Authentication_Active = Actif
+LBL_Require_Two_Step_Authentication = Exiger une authentification en deux \u00e9tapes
+LBL_Number_Of_One_Time_Codes = Nombre de codes \u00e0 usage unique \u00e0 g\u00e9n\u00e9rer
+MSG_Number_Of_One_Time_Codes = Nombre de codes \u00e0 usage unique \u00e0 g\u00e9n\u00e9rer
+LBL_Enable_Application_Passcodes = Activer les codes de passe de l'application
