--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -485,6 +485,7 @@ OVP_related = Associ\u00e9
 OVP_recent = Objets r\u00e9cents
 OVP_allSearchResult = Tous les r\u00e9sultats
 OVP_accountSearchResult = Comptes
+OVP_aliasSearchResult = Alias
 OVP_domainSearchResult = Domaines
 OVP_searchOption = Options de recherche
 OVP_savedSearch = Recherches enregistr\u00e9es
@@ -691,15 +692,14 @@ Alert_MoreResultsAvailable = Nombre de r\u00e9sultats sup\u00e9rieur \u00e0\u00a
 Alert_ServerDetails = \
 	<b>Remarque\u00a0:</b> les param\u00e8tres d'un serveur donn\u00e9 ont priorit\u00e9 sur les param\u00e8tres globaux.
 Alert_GlobalConfig = \
-	<b>Remarque\u00a0:</b> \
-	les param\u00e8tres s'appliquent uniquement aux serveurs sur lesquels le  \
- ou les services appropri\u00e9s ont \u00e9t\u00e9 install\u00e9s et activ\u00e9s. Les param\u00e8tres du serveur ont priorit\u00e9 sur les param\u00e8tres globaux.
+    <b>Remarque\u00a0:</b> \
+    Les param\u00e8tres s'appliquent uniquement aux serveurs sur lesquels le  ou les services appropri\u00e9s\
+ ont \u00e9t\u00e9 install\u00e9s et activ\u00e9s. Les param\u00e8tres appliqu\u00e9s aux serveurs, aux noms de domaine et aux classes de service remplacent les param\u00e8tres globaux.
 Alert_ServerRestart = \
 	<b>Attention :</b> 
  les modifications apport\u00e9es aux param\u00e8tres prennent effet seulement apr\u00e8s le red\u00e9marrage du serveur.
 Alert_ProxyConfig = \
-	<b>Remarque\u00a0:</b> \
-	configurable uniquement lorsque le proxy est install\u00e9 et activ\u00e9. Il est n\u00e9cessaire de red\u00e9marrer le proxy pour appliquer les modifications des param\u00e8tres.
+    <b>Attention :</b> Pour appliquer les modifications apport\u00e9es \u00e0 ces param\u00e8tres, vous devez red\u00e9marrer le serveur proxy.
 Alert_AmavisdRestart = \
 	<b>Remarque\u00a0:</b> \
 	Les modifications apport\u00e9es aux param\u00e8tres prennent effet seulement apr\u00e8s le red\u00e9marrage du serveur.
@@ -1238,6 +1238,7 @@ NAD_MailOptions = Options de courriel
 NAD_MailOptionsStandardClient = Client standard (HTML)
 NAD_ContactsOptions = Options de contacts
 NAD_CalendarOptions = Options de calendrier
+NAD_ChatOptions = Options de clavardage
 NAD_MailOptionsSending = Envoi de courriel
 NAD_MailOptionsReceiving = R\u00e9ception de courriel
 NAD_MailOptionsComposing = Cr\u00e9ation de courriel
@@ -1376,7 +1377,7 @@ NAD_zimbraSearchFeature = Fonctions de recherche
 LBL_zimbraFeatureNotebookEnabled = Documents
 LBL_zimbraFeatureBriefcasesEnabled = Porte-documents
 LBL_zimbraFeatureHtmlComposeEnabled = \u00c9criture en HTML
-LBL_zimbraFeatureChatEnabled = Messenger
+LBL_zimbraFeatureChatEnabled = Clavardage
 LBL_zimbraFeatureInstantNotify = Notifications instantan\u00e9es
 LBL_zimbraPrefIMAutoLogin = Connexion automatique aux services de messagerie instantan\u00e9e
 NAD_Feature = Fonction\u00a0: 
@@ -1500,6 +1501,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Afficher la liste des fuseaux horaires
 LBL_zimbraPrefImapSearchFoldersEnabled = Afficher les dossiers de recherche IMAP
 LBL_zimbraPrefMailForwardingAddress = Adresses de transfert saisies par l'utilisateur\u00a0:
 LBL_zimbraPrefMailForwardingAddressMsg = Adresses de transfert saisies par l'utilisateur
+LBL_zimbraPrefChatPlaySound = \u00c9mettre un son pour les notifications
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Au moins une adresse de transfert doit \u00eatre pr\u00e9cis\u00e9e si vous choisissez de ne pas conserver des copies locales de vos messages.
 
@@ -1792,6 +1794,7 @@ ERROR_DL_NAME_INVALID = Le nom donn\u00e9 au groupe est incorrect.
 ERROR_INVALID_VOLUME_PATH = Le chemin de volume pr\u00e9cis\u00e9 est incorrect!
 ERROR_NO_SUCH_VOLUME = Le volume pr\u00e9cis\u00e9 n'existe pas.
 ERROR_VOLUME_ALREADY_EXISTS = Le volume pr\u00e9cis\u00e9 existe d\u00e9j\u00e0.
+ERROR_MAX_ACCOUNT_QUOTA = Valeur de quota de compte incorrecte! Le quota de ce compte de messagerie est sup\u00e9rieur \u00e0 la valeur maximum que l'administrateur du nom de domaine peut allouer \u00e0 un utilisateur.
 
 ERROR_LICENSE = Erreur de licence 
 ERROR_NO_VALID_SUBNETS = Erreur! La valeur {0} ne correspond pas \u00e0 une liste correcte de sous-r\u00e9seaux. Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, reportez-vous \u00e0 la documentation. <br/>Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, consultez la page suivante\u00a0: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2224,7 +2227,6 @@ DLXV_LabelIsgroup = Peut \u00eatre utilis\u00e9 dans une liste ACL\u00a0:
 Q_REMOVE_INDIRECT_GROUP = La suppression de la liste de distribution {0} <br /> va aussi supprimer les listes suivantes : <br />{1}<br /> Voulez-vous vraiment retirer l\u2019abonnement \u00e0 cette liste de distribution?
 TooManyResults = Le nombre de r\u00e9sultats \u00e0 afficher est sup\u00e9rieur \u00e0 la limite\u00a0: veuillez modifier votre recherche.
 AccountCreated = Le compte {0} a \u00e9t\u00e9 cr\u00e9\u00e9.
-
 AliasCreated = L\u2019alias {0} a \u00e9t\u00e9 cr\u00e9\u00e9.
 DLCreated = La liste de distribution {0} a \u00e9t\u00e9 cr\u00e9\u00e9e.
 CosCreated = La classe COS {0} a \u00e9t\u00e9 cr\u00e9\u00e9e.
@@ -2774,3 +2776,11 @@ ERROR_InvalidRPLifetime = La plage doit \u00eatre un nombre entier positif.
 ERROR_RPExists = La r\u00e8gle "{0}" existe d\u00e9j\u00e0.
 multiple_servers = serveurs multiples
 
+Two_Factor_Authentication = Authentification \u00e0 deux facteurs
+LBL_Two_Step_Authentication = Authentification en deux \u00e9tapes
+LBL_Enable_Two_Factor_Authentication = Activer l'authentification \u00e0 deux facteurs
+LBL_Two_Factor_Authentication_Active = Actif
+LBL_Require_Two_Step_Authentication = Exiger une authentification en deux \u00e9tapes
+LBL_Number_Of_One_Time_Codes = Nombre de codes \u00e0 usage unique \u00e0 g\u00e9n\u00e9rer
+MSG_Number_Of_One_Time_Codes = Nombre de codes \u00e0 usage unique \u00e0 g\u00e9n\u00e9rer
+LBL_Enable_Application_Passcodes = Activer les codes de passe de l'application
