--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -485,6 +485,7 @@ OVP_related = Kapcsol\u00f3d\u00f3
 OVP_recent = Legut\u00f3bbi objektumok
 OVP_allSearchResult = Minden eredm\u00e9ny
 OVP_accountSearchResult = Fi\u00f3kok
+OVP_aliasSearchResult = Aliasok
 OVP_domainSearchResult = Tartom\u00e1nyok
 OVP_searchOption = Keres\u00e9si be\u00e1ll\u00edt\u00e1sok
 OVP_savedSearch = Mentett keres\u00e9sek
@@ -569,7 +570,6 @@ ACTBB_New_tt = Az \u00faj fi\u00f3k l\u00e9trehoz\u00e1s\u00e1n v\u00e9gigvezet\
 ACTBB_Edit_tt = Fi\u00f3k szerkeszt\u00e9se
 ACTBB_Delete_tt = Fi\u00f3k t\u00f6rl\u00e9se
 ACTBB_ChngPwd_tt = Felhaszn\u00e1l\u00f3i jelsz\u00f3 m\u00f3dos\u00edt\u00e1sa
-                                                
 ACTBB_MoveAlias_tt = Kiv\u00e1lasztott alias(ok) \u00e1thelyez\u00e9se egy m\u00e1sik fi\u00f3kba
 TBB_Help_tt = Az aktu\u00e1lis k\u00e9perny\u0151h\u00f6z kapcsol\u00f3d\u00f3 s\u00fag\u00f3t\u00e9mak\u00f6r\u00f6k megjelen\u00edt\u00e9se
 ACTBB_ReindexMbx_tt = A postafi\u00f3k index\u00e9nek \u00fajb\u00f3li l\u00e9trehoz\u00e1s\u00e1n v\u00e9gigvezet\u0151 var\u00e1zsl\u00f3 megnyit\u00e1sa.
@@ -692,15 +692,14 @@ Alert_MoreResultsAvailable = T\u00f6bb mint {0} eredm\u00e9ny.<br/> Sz\u0171k\u0
 Alert_ServerDetails = \
 	<b>Megjegyz\u00e9s:</b> Az egyes kiszolg\u00e1l\u00f3kon l\u00e9v\u0151 be\u00e1ll\u00edt\u00e1sok el\u0151nyt \u00e9lveznek a glob\u00e1lis be\u00e1ll\u00edt\u00e1sokkal szemben.
 Alert_GlobalConfig = \
-	<b>Megjegyz\u00e9s:</b> \
-	A be\u00e1ll\u00edt\u00e1sok csak azokra a kiszolg\u00e1l\u00f3kra \u00e9rv\u00e9nyesek, amelyeken a megfelel\u0151 szolg\u00e1ltat\u00e1s(ok) \
-	telep\u00edtve \u00e9s enged\u00e9lyezve vannak. A kiszolg\u00e1l\u00f3 be\u00e1ll\u00edt\u00e1sai el\u0151nyt \u00e9lveznek a glob\u00e1lis be\u00e1ll\u00edt\u00e1sokkal szemben.
+    <b>Megjegyz\u00e9s:</b> \
+    A be\u00e1ll\u00edt\u00e1sok csak azokra a szerverekre \u00e9rv\u00e9nyesek, amelyeken telep\u00edtve \u00e9s enged\u00e9lyezve vannak a megfelel\u0151 szolg\u00e1ltat\u00e1sok.\
+     A szerverekre, tartom\u00e1nyokra \u00e9s szolg\u00e1ltat\u00e1soszt\u00e1lyokra alkalmazott be\u00e1ll\u00edt\u00e1sok fel\u00fcl\u00edrj\u00e1k a glob\u00e1lis be\u00e1ll\u00edt\u00e1sokat.
 Alert_ServerRestart = \
 	<b>Figyelmeztet\u00e9s:</b> \
 	A be\u00e1ll\u00edt\u00e1sok v\u00e1ltoz\u00e1sai csak a kiszolg\u00e1l\u00f3 \u00fajraind\u00edt\u00e1sa ut\u00e1n l\u00e9pnek \u00e9letbe.
 Alert_ProxyConfig = \
-	<b>Megjegyz\u00e9s:</b> \
-	A konfigur\u00e1l\u00e1s csak telep\u00edtett \u00e9s enged\u00e9lyezett proxy eset\u00e9n lehets\u00e9ges. A m\u00f3dos\u00edt\u00e1sok \u00e9rv\u00e9nybe l\u00e9p\u00e9s\u00e9hez \u00fajra kell ind\u00edtani a proxyt.
+    <b>Figyelmeztet\u00e9s:</b> Ahhoz, hogy ezeknek a be\u00e1ll\u00edt\u00e1soknak a m\u00f3dos\u00edt\u00e1sa \u00e9letbe l\u00e9pjen, \u00fajra kell ind\u00edtani a proxyt.
 Alert_AmavisdRestart = \
 	<b>Megjegyz\u00e9s:</b> \
 	A be\u00e1ll\u00edt\u00e1sok v\u00e1ltoz\u00e1sai csak az amavisd \u00fajraind\u00edt\u00e1sa ut\u00e1n l\u00e9pnek \u00e9letbe.
@@ -1239,6 +1238,7 @@ NAD_MailOptions = Levelez\u00e9si be\u00e1ll\u00edt\u00e1sok
 NAD_MailOptionsStandardClient = Szabv\u00e1nyos (HTML) \u00fcgyf\u00e9l
 NAD_ContactsOptions = Partnerek opci\u00f3i
 NAD_CalendarOptions = Napt\u00e1r be\u00e1ll\u00edt\u00e1sai
+NAD_ChatOptions = Cseveg\u00e9si opci\u00f3k
 NAD_MailOptionsSending = Lev\u00e9lk\u00fcld\u00e9s
 NAD_MailOptionsReceiving = E-mail fogad\u00e1sa
 NAD_MailOptionsComposing = E-mail \u00edr\u00e1sa
@@ -1377,7 +1377,7 @@ NAD_zimbraSearchFeature = Keres\u00e9si szolg\u00e1ltat\u00e1sok
 LBL_zimbraFeatureNotebookEnabled = Dokumentumok
 LBL_zimbraFeatureBriefcasesEnabled = T\u00e1ska
 LBL_zimbraFeatureHtmlComposeEnabled = HTML-\u00edr\u00e1s
-LBL_zimbraFeatureChatEnabled = Azonnali \u00fczenetk\u00fcld\u0151
+LBL_zimbraFeatureChatEnabled = Cseveg\u00e9s
 LBL_zimbraFeatureInstantNotify = Azonnali \u00e9rtes\u00edt\u00e9sek
 LBL_zimbraPrefIMAutoLogin = Automatikus bejelentkez\u00e9s az azonnali \u00fczenetk\u00fcld\u0151 szolg\u00e1ltat\u00e1sokba
 NAD_Feature = Szolg\u00e1ltat\u00e1s: 
@@ -1501,6 +1501,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Id\u0151z\u00f3n\u00e1k list\u00e1j\u0
 LBL_zimbraPrefImapSearchFoldersEnabled = IMAP keres\u00e9si mapp\u00e1k megjelen\u00edt\u00e9se
 LBL_zimbraPrefMailForwardingAddress = Felhaszn\u00e1l\u00f3 \u00e1ltal megadott tov\u00e1bb\u00edt\u00e1si c\u00edmek:
 LBL_zimbraPrefMailForwardingAddressMsg = Felhaszn\u00e1l\u00f3 \u00e1ltal megadott tov\u00e1bb\u00edt\u00e1si c\u00edmek
+LBL_zimbraPrefChatPlaySound = \u00c9rtes\u00edt\u00e9si hang lej\u00e1tsz\u00e1sa
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Legal\u00e1bb egy tov\u00e1bb\u00edt\u00e1si c\u00edmet meg kell hat\u00e1rozni, amikor azt v\u00e1lasztja, hogy nem tartja meg az \u00fczenetek helyi m\u00e1solatait.
 
@@ -1793,6 +1794,7 @@ ERROR_DL_NAME_INVALID = A terjeszt\u00e9si lista megadott neve \u00e9rv\u00e9nyt
 ERROR_INVALID_VOLUME_PATH = A megadott k\u00f6tet\u00fatvonal \u00e9rv\u00e9nytelen!
 ERROR_NO_SUCH_VOLUME = A megadott k\u00f6tet nem l\u00e9tezik!
 ERROR_VOLUME_ALREADY_EXISTS = A megadott k\u00f6tet m\u00e1r l\u00e9tezik!
+ERROR_MAX_ACCOUNT_QUOTA = \u00c9rv\u00e9nytelen \u00e9rt\u00e9k a fi\u00f3kkv\u00f3t\u00e1hoz! A fi\u00f3kkv\u00f3ta t\u00fall\u00e9pi a levelez\u00e9si kv\u00f3tatartom\u00e1ny maxim\u00e1lis mennyis\u00e9g\u00e9t, amelyet a rendszergazda \u00e1ll\u00edthat be a felhaszn\u00e1l\u00f3 sz\u00e1m\u00e1ra
 
 ERROR_LICENSE = Licenchiba t\u00f6rt\u00e9nt 
 ERROR_NO_VALID_SUBNETS = Hiba! A(z) {0} \u00e9rt\u00e9k nem \u00e9rv\u00e9nyes alh\u00e1l\u00f3zatlista. Tekintse \u00e1t a dokument\u00e1ci\u00f3t az MTA megb\u00edzhat\u00f3 h\u00e1l\u00f3zatok konfigur\u00e1l\u00e1s\u00e1val kapcsolatos tudnival\u00f3k\u00e9rt. <br/>Az MTA megb\u00edzhat\u00f3 h\u00e1l\u00f3zatok konfigur\u00e1ci\u00f3j\u00e1r\u00f3l a <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a> c\u00edmen tal\u00e1l b\u0151vebb inform\u00e1ci\u00f3t.
@@ -2774,3 +2776,11 @@ ERROR_InvalidRPLifetime = Ennek a tartom\u00e1nynak pozit\u00edv eg\u00e9sz sz\u
 ERROR_RPExists = A(z) \u201e{0}\u201d h\u00e1zirend m\u00e1r l\u00e9tezik.
 multiple_servers = t\u00f6bb kiszolg\u00e1l\u00f3
 
+Two_Factor_Authentication = K\u00e9tt\u00e9nyez\u0151s hiteles\u00edt\u00e9s
+LBL_Two_Step_Authentication = K\u00e9tl\u00e9p\u00e9ses hiteles\u00edt\u00e9s
+LBL_Enable_Two_Factor_Authentication = K\u00e9tt\u00e9nyez\u0151s hiteles\u00edt\u00e9s enged\u00e9lyez\u00e9se
+LBL_Two_Factor_Authentication_Active = Akt\u00edv
+LBL_Require_Two_Step_Authentication = K\u00e9tl\u00e9p\u00e9ses hiteles\u00edt\u00e9s sz\u00fcks\u00e9ges
+LBL_Number_Of_One_Time_Codes = A gener\u00e1land\u00f3 egyszeri k\u00f3dok sz\u00e1ma:
+MSG_Number_Of_One_Time_Codes = A gener\u00e1land\u00f3 egyszeri k\u00f3dok sz\u00e1ma
+LBL_Enable_Application_Passcodes = Alkalmaz\u00e1sk\u00f3dok enged\u00e9lyez\u00e9se
