--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -479,6 +479,7 @@ OVP_related = Elementi correlati
 OVP_recent = Oggetti recenti
 OVP_allSearchResult = Tutti i risultati
 OVP_accountSearchResult = Account
+OVP_aliasSearchResult = Alias
 OVP_domainSearchResult = Domini
 OVP_searchOption = Opzioni di ricerca
 OVP_savedSearch = Ricerche salvate
@@ -679,11 +680,15 @@ PQ_Delete_tt = Elimina tutti i messaggi in questa coda su questo server
 
 Alert_MoreResultsAvailable = Trovati oltre {0} risultati.<br/> Limita la ricerca. 
 Alert_ServerDetails = <b>Nota -</b> Le impostazioni di un singolo server sovrascrivono le impostazioni globali.
-Alert_GlobalConfig = <b>Nota -</b> Le impostazioni vengono applicate solo ai server con i servizi appropriati installati e attivati. Le impostazioni dei server sovrascrivono quelle globali.
+Alert_GlobalConfig = \
+    <b>Nota:</b> \
+    le impostazioni vengono applicate solo ai server con i servizi \u2028\u2028\
+appropriati installati e attivati. Le impostazioni applicate a server, domini e classi di servizio hanno la priorit\u00e0 su quelle globali.
 Alert_ServerRestart = \
 	<b>Avviso:</b> \
 	le modifiche alle impostazioni diventano effettive solo dopo aver riavviato il server.
-Alert_ProxyConfig = <b>Nota:</b> configurabile solamente quando il proxy \u00e8 installato e attivato. Le modifiche alle impostazioni diventano effettive solo dopo il riavvio del proxy.
+Alert_ProxyConfig = \
+    <b>Avviso:</b> le modifiche a queste impostazioni richiedono il riavvio del proxy per avere effetto.
 Alert_AmavisdRestart = <b>Nota:</b> le modifiche alle impostazioni diventano effettive solo dopo il riavvio di amavisd.
 Alert_HSM = <b>Nota -</b> Puoi avviare manualmente una sessione HSM premendo il pulsante \u201cInizia sessione HSM\u201d. Le sessioni HSM si possono anche programmare sui server tramite i cron job (ambiente Unix). <br>
 Alert_InternalPassword = <b>Nota -</b> Queste impostazioni non influiscono sulle password impostate dagli utenti in domini configurati per l'uso dell'autenticazione esterna.
@@ -832,7 +837,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = Antivirus
 NAD_Service_AntiSpam = Antispam
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = Logger
 NAD_Service_Spell = Controllo ortografico
 NAD_Service_Imapproxy = Proxy inverso
@@ -1208,6 +1212,7 @@ NAD_MailOptions = Opzioni Mail
 NAD_MailOptionsStandardClient = Client (HTML) standard
 NAD_ContactsOptions = Opzioni contatti
 NAD_CalendarOptions = Opzioni Agenda
+NAD_ChatOptions = Opzioni chat
 NAD_MailOptionsSending = Invio messaggi
 NAD_MailOptionsReceiving = Ricezione messaggi
 NAD_MailOptionsComposing = Composizione mail...
@@ -1346,7 +1351,7 @@ NAD_zimbraSearchFeature = Funzioni di ricerca
 LBL_zimbraFeatureNotebookEnabled = Documenti
 LBL_zimbraFeatureBriefcasesEnabled = Valigetta
 LBL_zimbraFeatureHtmlComposeEnabled = Composizione HTML
-LBL_zimbraFeatureChatEnabled = Messaggi istantanei
+LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = Notifiche istantanee
 LBL_zimbraPrefIMAutoLogin = Entra automaticamente nei servizi di messaggeria istantanea
 NAD_Feature = Funzione: 
@@ -1470,6 +1475,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Visualizza l'elenco dei fusi orari nel
 LBL_zimbraPrefImapSearchFoldersEnabled = Mostra le cartelle di ricerca IMAP
 LBL_zimbraPrefMailForwardingAddress = Indirizzi di inoltro specificati dall'utente:
 LBL_zimbraPrefMailForwardingAddressMsg = Indirizzi di inoltro specificati dall'utente
+LBL_zimbraPrefChatPlaySound = Riproduci un suono di notifica
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Se scegli di non conservare copie locali dei messaggi devi specificare almeno un indirizzo di inoltro.
 
@@ -1755,6 +1761,7 @@ ERROR_DL_NAME_INVALID = Il nome della lista di distribuzione specificato non \u0
 ERROR_INVALID_VOLUME_PATH = Il percorso del volume specificato non \u00e8 valido.
 ERROR_NO_SUCH_VOLUME = Il volume specificato non esiste.
 ERROR_VOLUME_ALREADY_EXISTS = Il volume specificato gi\u00e0 esiste.
+ERROR_MAX_ACCOUNT_QUOTA = Valore non valido per lo spazio a disposizione dell'account. Lo spazio a disposizione dell'account supera la quantit\u00e0 massima di posta che l'amministratore di dominio pu\u00f2 impostare per un utente.
 
 ERROR_LICENSE = Riscontrato errore di licenza 
 ERROR_NO_VALID_SUBNETS = Errore. Il valore {0} non \u00e8 un elenco valido di sottoreti. Consulta la documentazione per istruzioni sulla configurazione di reti affidabili MTA. <br/>Ulteriori informazioni in merito sono disponibili sul sito <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2670,3 +2677,11 @@ ERROR_InvalidRPLifetime = L'intervallo deve essere indicato da un numero intero 
 ERROR_RPExists = Il criterio "{0}" esiste gi\u00e0.
 multiple_servers = pi\u00f9 server
 
+Two_Factor_Authentication = Autenticazione a due fattori
+LBL_Two_Step_Authentication = Autenticazione in due passaggi 
+LBL_Enable_Two_Factor_Authentication = Attiva autenticazione a due fattori
+LBL_Two_Factor_Authentication_Active = Attivo
+LBL_Require_Two_Step_Authentication = Richiedi autenticazione in due passaggi 
+LBL_Number_Of_One_Time_Codes = Numero di codici monouso da generare:
+MSG_Number_Of_One_Time_Codes = Numero di codici monouso da generare
+LBL_Enable_Application_Passcodes = Attiva passcode applicazione
