--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -485,6 +485,7 @@ OVP_related = \u05e7\u05e9\u05d5\u05e8
 OVP_recent = \u05d0\u05d5\u05d1\u05d9\u05d9\u05e7\u05d8\u05d9\u05dd \u05d0\u05d7\u05e8\u05d5\u05e0\u05d9\u05dd
 OVP_allSearchResult = \u05db\u05dc \u05d4\u05ea\u05d5\u05e6\u05d0\u05d5\u05ea
 OVP_accountSearchResult = \u05d7\u05e9\u05d1\u05d5\u05e0\u05d5\u05ea
+OVP_aliasSearchResult = \u05db\u05d9\u05e0\u05d5\u05d9\u05d9\u05dd
 OVP_domainSearchResult = \u05ea\u05d7\u05d5\u05de\u05d9\u05dd
 OVP_searchOption = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea \u05d7\u05d9\u05e4\u05d5\u05e9
 OVP_savedSearch = \u05d7\u05d9\u05e4\u05d5\u05e9\u05d9\u05dd \u05e9\u05e0\u05e9\u05de\u05e8\u05d5
@@ -691,15 +692,14 @@ Alert_MoreResultsAvailable = \u05e0\u05de\u05e6\u05d0\u05d5 \u05d9\u05d5\u05ea\u
 Alert_ServerDetails = \
 	<b>\u05d4\u05e2\u05e8\u05d4:</b> \u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05d1\u05e9\u05e8\u05ea \u05de\u05e1\u05d5\u05d9\u05dd \u05d2\u05d5\u05d1\u05e8\u05d5\u05ea \u05e2\u05dc \u05d4\u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05d4\u05d2\u05dc\u05d5\u05d1\u05dc\u05d9\u05d5\u05ea.
 Alert_GlobalConfig = \
-	<b>\u05d4\u05e2\u05e8\u05d4:</b> \
-	\u05d4\u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05d7\u05dc\u05d5\u05ea \u05e8\u05e7 \u05e2\u05dc \u05e9\u05e8\u05ea\u05d9\u05dd \u05e9\u05d1\u05d4\u05dd \u05de\u05d5\u05ea\u05e7\u05e0\u05d9\u05dd \u05d5\u05de\u05d5\u05e4\u05e2\u05dc\u05d9\u05dd \
-	\u05d4\u05e9\u05d9\u05e8\u05d5\u05ea\u05d9\u05dd \u05d4\u05de\u05ea\u05d0\u05d9\u05de\u05d9\u05dd. \u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05e9\u05e8\u05ea \u05d2\u05d5\u05d1\u05e8\u05d5\u05ea \u05e2\u05dc \u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05d2\u05dc\u05d5\u05d1\u05dc\u05d9\u05d5\u05ea.
+    <b>\u05d4\u05e2\u05e8\u05d4:</b> \
+    \u05d4\u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05d7\u05dc\u05d5\u05ea \u05e8\u05e7 \u05e2\u05dc \u05e9\u05e8\u05ea\u05d9\u05dd \u05d1\u05e2\u05dc\u05d9 \u05d4\u05e9\u05d9\u05e8\u05d5\u05ea\u05d9\u05dd \u05d4\u05de\u05ea\u05d0\u05d9\u05de\u05d9\u05dd \
+    \u05e9\u05d4\u05d5\u05ea\u05e7\u05e0\u05d5 \u05d5\u05d4\u05d5\u05e4\u05e2\u05dc\u05d5. \u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05d4\u05d7\u05dc\u05d5\u05ea \u05e2\u05dc \u05e9\u05e8\u05ea\u05d9\u05dd, \u05ea\u05d7\u05d5\u05de\u05d9\u05dd \u05d5\u05de\u05d7\u05dc\u05e7\u05d5\u05ea \u05e9\u05d9\u05e8\u05d5\u05ea \u05de\u05d7\u05dc\u05d9\u05e4\u05d5\u05ea \u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05d2\u05dc\u05d5\u05d1\u05dc\u05d9\u05d5\u05ea.
 Alert_ServerRestart = \
 	<b>\u05d0\u05d6\u05d4\u05e8\u05d4:</b> \
 	\u05db\u05d3\u05d9 \u05e9\u05d4\u05e9\u05d9\u05e0\u05d5\u05d9\u05d9\u05dd \u05d1\u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05d9\u05d9\u05db\u05e0\u05e1\u05d5 \u05dc\u05ea\u05d5\u05e7\u05e3, \u05d9\u05e9 \u05dc\u05d4\u05e4\u05e2\u05d9\u05dc \u05de\u05d7\u05d3\u05e9 \u05d0\u05ea \u05d4\u05e9\u05e8\u05ea.
 Alert_ProxyConfig = \
-	<b>\u05d4\u05e2\u05e8\u05d4:</b> \
-	\u05e0\u05d9\u05ea\u05df \u05dc\u05e7\u05d1\u05d5\u05e2 \u05d0\u05ea \u05d4\u05ea\u05e6\u05d5\u05e8\u05d4 \u05e8\u05e7 \u05db\u05d0\u05e9\u05e8 Proxy \u05de\u05d5\u05ea\u05e7\u05df \u05d5\u05de\u05d5\u05e4\u05e2\u05dc. \u05db\u05d3\u05d9 \u05e9\u05d4\u05e9\u05d9\u05e0\u05d5\u05d9\u05d9\u05dd \u05d1\u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05d9\u05d9\u05db\u05e0\u05e1\u05d5 \u05dc\u05ea\u05d5\u05e7\u05e3, \u05d9\u05e9 \u05dc\u05d4\u05e4\u05e2\u05d9\u05dc \u05de\u05d7\u05d3\u05e9 \u05d0\u05ea \u05d4-Proxy\u200f.
+    <b>\u05d0\u05d6\u05d4\u05e8\u05d4:</b> \u05e9\u05d9\u05e0\u05d5\u05d9\u05dd \u05d1\u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05d0\u05dc\u05d4 \u05de\u05d7\u05d9\u05d9\u05d1\u05d9\u05dd \u05d4\u05e4\u05e2\u05dc\u05d4 \u05de\u05d7\u05d3\u05e9 \u05e9\u05dc \u05e9\u05e8\u05ea \u05d4-proxy \u05db\u05d3\u05d9 \u05e9\u05d9\u05d9\u05db\u05e0\u05e1\u05d5 \u05dc\u05ea\u05d5\u05e7\u05e3.
 Alert_AmavisdRestart = \
 	<b>\u05d4\u05e2\u05e8\u05d4:</b> \
 	\u05db\u05d3\u05d9 \u05e9\u05d4\u05e9\u05d9\u05e0\u05d5\u05d9\u05d9\u05dd \u05d1\u05d4\u05d2\u05d3\u05e8\u05d5\u05ea \u05d9\u05d9\u05db\u05e0\u05e1\u05d5 \u05dc\u05ea\u05d5\u05e7\u05e3, \u05d9\u05e9 \u05dc\u05d4\u05e4\u05e2\u05d9\u05dc \u05de\u05d7\u05d3\u05e9 \u05d0\u05ea \u05d4-amavisd\u200f.
@@ -1238,6 +1238,7 @@ NAD_MailOptions = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea \u05d3\u05d5\
 NAD_MailOptionsStandardClient = \u05dc\u05e7\u05d5\u05d7 \u05e8\u05d2\u05d9\u05dc (HTML\u200f)
 NAD_ContactsOptions = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea \u05d0\u05e0\u05e9\u05d9 \u05e7\u05e9\u05e8
 NAD_CalendarOptions = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea \u05dc\u05d5\u05d7-\u05e9\u05e0\u05d4
+NAD_ChatOptions = \u05d0\u05e4\u05e9\u05e8\u05d5\u05d9\u05d5\u05ea \u05e6'\u05d0\u05d8
 NAD_MailOptionsSending = \u05e9\u05dc\u05d9\u05d7\u05ea \u05d3\u05d5\u05d0"\u05dc
 NAD_MailOptionsReceiving = \u05e7\u05d1\u05dc\u05ea \u05d3\u05d5\u05d0"\u05dc
 NAD_MailOptionsComposing = \u05d9\u05e6\u05d9\u05e8\u05ea \u05d3\u05d5\u05d0"\u05dc
@@ -1371,12 +1372,12 @@ NAD_zimbraGeneralFeature = \u05ea\u05db\u05d5\u05e0\u05d5\u05ea \u05db\u05dc\u05
 NAD_zimbraMailFeature = \u05ea\u05db\u05d5\u05e0\u05d5\u05ea \u05d3\u05d5\u05d0\u05e8
 NAD_zimbraContactFeature = \u05ea\u05db\u05d5\u05e0\u05d5\u05ea \u05d0\u05d9\u05e9 \u05e7\u05e9\u05e8
 NAD_zimbraCalendarFeature = \u05ea\u05db\u05d5\u05e0\u05d5\u05ea \u05dc\u05d5\u05d7-\u05e9\u05e0\u05d4
-NAD_zimbraChatFeature = \u05ea\u05db\u05d5\u05e0\u05d5\u05ea \u05e9\u05dc \u05d4\u05d5\u05d3\u05e2\u05d5\u05ea \u05de\u05d9\u05d9\u05d3\u05d9\u05d5\u05ea
+NAD_zimbraChatFeature = \u05ea\u05db\u05d5\u05e0\u05d5\u05ea IM
 NAD_zimbraSearchFeature = \u05ea\u05db\u05d5\u05e0\u05d5\u05ea \u05d7\u05d9\u05e4\u05d5\u05e9
 LBL_zimbraFeatureNotebookEnabled = \u05de\u05e1\u05de\u05db\u05d9\u05dd
 LBL_zimbraFeatureBriefcasesEnabled = \u05ea\u05d9\u05e7 \u05de\u05e1\u05de\u05db\u05d9\u05dd
 LBL_zimbraFeatureHtmlComposeEnabled = \u05e6\u05d5\u05e8 HTML\u200f
-LBL_zimbraFeatureChatEnabled = \u05d9\u05d9\u05e9\u05d5\u05dd \u05d4\u05d5\u05d3\u05e2\u05d5\u05ea \u05de\u05d9\u05d9\u05d3\u05d9\u05d5\u05ea
+LBL_zimbraFeatureChatEnabled = \u05e6'\u05d0\u05d8
 LBL_zimbraFeatureInstantNotify = \u05d4\u05d5\u05d3\u05e2\u05d5\u05ea \u05de\u05d9\u05d9\u05d3\u05d9\u05d5\u05ea
 LBL_zimbraPrefIMAutoLogin = \u05d4\u05d9\u05db\u05e0\u05e1 \u05d0\u05d5\u05d8\u05d5\u05de\u05d8\u05d9\u05ea \u05dc\u05e9\u05d9\u05e8\u05d5\u05ea\u05d9 \u05d4\u05d5\u05d3\u05e2\u05d5\u05ea \u05de\u05d9\u05d9\u05d3\u05d9\u05d5\u05ea
 NAD_Feature = \u05ea\u05db\u05d5\u05e0\u05d4: 
@@ -1500,6 +1501,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = \u05d4\u05e6\u05d2 \u05e8\u05e9\u05d9\
 LBL_zimbraPrefImapSearchFoldersEnabled = \u05d4\u05e6\u05d2 \u05ea\u05d9\u05e7\u05d9\u05d5\u05ea \u05d7\u05d9\u05e4\u05d5\u05e9 IMAP\u200f
 LBL_zimbraPrefMailForwardingAddress = \u05db\u05ea\u05d5\u05d1\u05ea \u05dc\u05d4\u05e2\u05d1\u05e8\u05d4 \u2013 \u05d1\u05d4\u05d2\u05d3\u05e8\u05ea \u05d4\u05de\u05e9\u05ea\u05de\u05e9:
 LBL_zimbraPrefMailForwardingAddressMsg = \u05db\u05ea\u05d5\u05d1\u05ea \u05dc\u05d4\u05e2\u05d1\u05e8\u05d4 \u2013 \u05d1\u05d4\u05d2\u05d3\u05e8\u05ea \u05d4\u05de\u05e9\u05ea\u05de\u05e9
+LBL_zimbraPrefChatPlaySound = \u05d4\u05e9\u05de\u05e2 \u05e6\u05dc\u05d9\u05dc \u05d4\u05d5\u05d3\u05e2\u05d4
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \u05d9\u05e9 \u05dc\u05e6\u05d9\u05d9\u05df \u05db\u05ea\u05d5\u05d1\u05ea \u05dc\u05d4\u05e2\u05d1\u05e8\u05d4 \u05d0\u05d7\u05ea \u05dc\u05e4\u05d7\u05d5\u05ea \u05d1\u05e2\u05ea \u05d1\u05d7\u05d9\u05e8\u05d4 \u05e9\u05dc\u05d0 \u05dc\u05e9\u05de\u05d5\u05e8 \u05d4\u05e2\u05ea\u05e7\u05d9\u05dd \u05de\u05e7\u05d5\u05de\u05d9\u05d9\u05dd \u05e9\u05dc \u05d4\u05d5\u05d3\u05e2\u05d5\u05ea.
 
@@ -1792,6 +1794,7 @@ ERROR_DL_NAME_INVALID = \u05e9\u05dd \u05e8\u05e9\u05d9\u05de\u05ea \u05d4\u05ea
 ERROR_INVALID_VOLUME_PATH = \u05d4\u05e0\u05ea\u05d9\u05d1 \u05e9\u05e6\u05d5\u05d9\u05df \u05d0\u05dc \u05d0\u05de\u05e6\u05e2\u05d9 \u05d4\u05d0\u05d7\u05e1\u05d5\u05df \u05d0\u05d9\u05e0\u05d5 \u05d7\u05d5\u05e7\u05d9.
 ERROR_NO_SUCH_VOLUME = \u05d0\u05de\u05e6\u05e2\u05d9 \u05d4\u05d0\u05d7\u05e1\u05d5\u05df \u05e9\u05e6\u05d5\u05d9\u05df \u05d0\u05d9\u05e0\u05d5 \u05d7\u05d5\u05e7\u05d9!
 ERROR_VOLUME_ALREADY_EXISTS = \u05d0\u05de\u05e6\u05e2\u05d9 \u05d4\u05d0\u05d7\u05e1\u05d5\u05df \u05e9\u05e6\u05d5\u05d9\u05df \u05db\u05d1\u05e8 \u05e7\u05d9\u05d9\u05dd!
+ERROR_MAX_ACCOUNT_QUOTA = \u05e2\u05e8\u05da \u05dc\u05d0-\u05d7\u05d5\u05e7\u05d9 \u05e2\u05d1\u05d5\u05e8 \u05de\u05db\u05e1\u05ea \u05d7\u05e9\u05d1\u05d5\u05df! \u05de\u05db\u05e1\u05ea \u05d4\u05d7\u05e9\u05d1\u05d5\u05df \u05d7\u05d5\u05e8\u05d2\u05ea \u05de\u05de\u05db\u05e1\u05ea \u05d4\u05d3\u05d5\u05d0\u05e8 \u05d4\u05de\u05e8\u05d1\u05d9\u05ea \u05e9\u05de\u05e0\u05d4\u05dc \u05d4\u05ea\u05d7\u05d5\u05dd \u05d9\u05db\u05d5\u05dc \u05dc\u05d4\u05d2\u05d3\u05d9\u05e8 \u05e2\u05d1\u05d5\u05e8 \u05de\u05e9\u05ea\u05de\u05e9.
 
 ERROR_LICENSE = \u05d0\u05d9\u05e8\u05e2\u05d4 \u05e9\u05d2\u05d9\u05d0\u05ea \u05e8\u05d9\u05e9\u05d9\u05d5\u05df 
 ERROR_NO_VALID_SUBNETS = \u05e9\u05d2\u05d9\u05d0\u05d4! \u05d4\u05e2\u05e8\u05da {0} \u05d0\u05d9\u05e0\u05d5 \u05e8\u05e9\u05d9\u05de\u05d4 \u05d7\u05d5\u05e7\u05d9\u05ea \u05e9\u05dc \u05e8\u05e9\u05ea\u05d5\u05ea \u05de\u05e9\u05e0\u05d4. \u05e2\u05d9\u05d9\u05df \u05d1\u05ea\u05d9\u05e2\u05d5\u05d3 \u05dc\u05e7\u05d1\u05dc\u05ea \u05e2\u05d6\u05e8\u05d4 \u05d1\u05e7\u05d1\u05d9\u05e2\u05ea \u05d4\u05ea\u05e6\u05d5\u05e8\u05d4 \u05e9\u05dc '\u05e8\u05e9\u05ea\u05d5\u05ea \u05de\u05d4\u05d9\u05de\u05e0\u05d5\u05ea \u05e9\u05dc MTA'. <br/>\u05dc\u05de\u05d9\u05d3\u05e2 \u05e0\u05d5\u05e1\u05e3 \u05e2\u05dc \u05ea\u05e6\u05d5\u05e8\u05ea '\u05e8\u05e9\u05ea\u05d5\u05ea \u05de\u05d4\u05d9\u05de\u05e0\u05d5\u05ea \u05e9\u05dc MTA', \u05e8\u05d0\u05d4 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2773,3 +2776,11 @@ ERROR_InvalidRPLifetime = \u05d4\u05d8\u05d5\u05d5\u05d7 \u05d7\u05d9\u05d9\u05d
 ERROR_RPExists = \u05d4\u05de\u05d3\u05d9\u05e0\u05d9\u05d5\u05ea "{0}" \u05db\u05d1\u05e8 \u05e7\u05d9\u05d9\u05de\u05ea.
 multiple_servers = \u05e9\u05e8\u05ea\u05d9\u05dd \u05de\u05e8\u05d5\u05d1\u05d9\u05dd.
 
+Two_Factor_Authentication = \u05d0\u05d9\u05de\u05d5\u05ea \u05d3\u05d5-\u05d2\u05d5\u05e8\u05de\u05d9\u05d1\u05df \u05e9\u05e0\u05d9 \u05e4\u05e7\u05d8\u05d5\u05e8\u05d9\u05dd
+LBL_Two_Step_Authentication = \u05d0\u05d9\u05de\u05d5\u05ea \u05d3\u05d5-\u05e9\u05dc\u05d1\u05d9
+LBL_Enable_Two_Factor_Authentication = \u05d4\u05e4\u05e2\u05dc \u05d0\u05d9\u05de\u05d5\u05ea \u05d3\u05d5-\u05d2\u05d5\u05e8\u05de\u05d9
+LBL_Two_Factor_Authentication_Active = \u05e4\u05e2\u05d9\u05dc
+LBL_Require_Two_Step_Authentication = \u05d3\u05e8\u05d5\u05e9 \u05d0\u05d9\u05de\u05d5\u05ea \u05d3\u05d5-\u05e9\u05dc\u05d1\u05d9
+LBL_Number_Of_One_Time_Codes = \u05de\u05e1\u05e4\u05e8 \u05e7\u05d5\u05d3\u05d9\u05dd \u05d7\u05d3-\u05e4\u05e2\u05de\u05d9\u05d9\u05dd \u05e9\u05d9\u05e9 \u05dc\u05d4\u05e4\u05d9\u05e7:
+MSG_Number_Of_One_Time_Codes = \u05de\u05e1\u05e4\u05e8 \u05e7\u05d5\u05d3\u05d9\u05dd \u05d7\u05d3-\u05e4\u05e2\u05de\u05d9\u05d9\u05dd \u05e9\u05d9\u05e9 \u05dc\u05d4\u05e4\u05d9\u05e7
+LBL_Enable_Application_Passcodes = \u05d4\u05e4\u05e2\u05dc \u05e7\u05d5\u05d3\u05d9 \u05e1\u05d9\u05e1\u05de\u05d0\u05d5\u05ea \u05e2\u05d1\u05d5\u05e8 \u05d9\u05d9\u05e9\u05d5\u05de\u05d9\u05dd
