--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -485,6 +485,7 @@ OVP_related = Berkaitan
 OVP_recent = Objek Terkini
 OVP_allSearchResult = Semua Hasil
 OVP_accountSearchResult = Akaun
+OVP_aliasSearchResult = Alias
 OVP_domainSearchResult = Domain
 OVP_searchOption = Opsyen Gelintaran
 OVP_savedSearch = Gelintaran Tersimpan
@@ -691,15 +692,14 @@ Alert_MoreResultsAvailable = Telah menemui lebih {0} hasil.<br/> Sila kecilkan g
 Alert_ServerDetails = \
 	<b>Nota:</b> Tetapan pada setiap pelayan berasingan membatalkan tetapan global.
 Alert_GlobalConfig = \
-	<b>Nota:</b> \
-	Tetapan hanya terpakai pada pelayan yang mempunyai perkhidmatan yang bersesuaian \
-	dipasang dan didayakan.
+    <b>Nota:</b> \
+    Tetapan hanya berkenaan kepada pelayan yang mempunyai perkhidmatan yang sesuai \
+ dipasang dan didayakan. Tetapan dikenakan pada tetapan global atasi perkhidmatan pelayan, domain dan kelas.
 Alert_ServerRestart = \
 	<b>Amaran:</b> \
 	Perubahan kepada tetapan memerlukan pemulaan semula pelayan untuk berkuat kuasa.
 Alert_ProxyConfig = \
-	<b>Nota:</b> \
-	Hanya boleh dikonfigurasikan apabila proksi dipasang dan didayakan. Perubahan kepada tetapan memerlukan pemulaan semula proksi untuk terlaksana.
+    <b>Amaran:</b> Perubahan kepada tetapan ini perlu memulakan semula proksi supaya ia berkesan.
 Alert_AmavisdRestart = \
 	<b>Nota:</b> \
 	Perubahan kepada tetapan memerlukan pemulaan semula amavisd untuk terlaksana.
@@ -863,7 +863,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = Anti Virus
 NAD_Service_AntiSpam = Anti Spam
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = Pengelog
 NAD_Service_Spell = Penyemak Ejaan
 NAD_Service_Imapproxy = Proksi songsang
@@ -1239,6 +1238,7 @@ NAD_MailOptions = Opsyen Mel
 NAD_MailOptionsStandardClient = Pelanggan Standard (HTML)
 NAD_ContactsOptions = Opsyen Kenalan
 NAD_CalendarOptions = Opsyen Kalendar
+NAD_ChatOptions = Pilihan Sembang
 NAD_MailOptionsSending = Menghantar mel
 NAD_MailOptionsReceiving = Menerima mel
 NAD_MailOptionsComposing = Mengarang mel
@@ -1377,7 +1377,7 @@ NAD_zimbraSearchFeature = Ciri Gelintaran
 LBL_zimbraFeatureNotebookEnabled = Dokumen
 LBL_zimbraFeatureBriefcasesEnabled = Beg Bimbit
 LBL_zimbraFeatureHtmlComposeEnabled = Karang HTML
-LBL_zimbraFeatureChatEnabled = Pemesejan Segera
+LBL_zimbraFeatureChatEnabled = Sembang
 LBL_zimbraFeatureInstantNotify = Pemberitahuan Segera
 LBL_zimbraPrefIMAutoLogin = Log masuk secara automatik ke perkhidmatan pemesejan segera
 NAD_Feature = Ciri: 
@@ -1501,6 +1501,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Tunjuk senarai zon waktu dalam pandang
 LBL_zimbraPrefImapSearchFoldersEnabled = Tunjuk folder gelintaran IMAP
 LBL_zimbraPrefMailForwardingAddress = Alamat pemajuan ditentukan pengguna:
 LBL_zimbraPrefMailForwardingAddressMsg = Alamat pemajuan ditentukan pengguna
+LBL_zimbraPrefChatPlaySound = Mainkan bunyi pemberitahuan
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Sekurang-kurangnya satu alamat dimajukan mesti ditentukan apabila memilih tidak menyimpan salinan setempat mesej.
 
@@ -1793,6 +1794,7 @@ ERROR_DL_NAME_INVALID = Nama senarai edaran yang ditentukan tidak sah.
 ERROR_INVALID_VOLUME_PATH = Laluan volum yang ditentukan tidak sah!
 ERROR_NO_SUCH_VOLUME = Volum yang ditentukan tidak wujud!
 ERROR_VOLUME_ALREADY_EXISTS = Volum yang ditentukan sudah wujud!
+ERROR_MAX_ACCOUNT_QUOTA = Nilai tidak sah bagi kuota akaun! Kuota akaun melebihi bilangan maksimum bagi kuota mel yang pentadbir domain dapat sediakan kepada seseorang pengguna.
 
 ERROR_LICENSE = Ralat lesen ditemui 
 ERROR_NO_VALID_SUBNETS = Ralat! Nilai {0} bukan senarai subnet yang sah. Sila rujuk dokumentasi untuk mendapatkan bantuan tentang cara mengkonfigurasi Rangkaian Dipercayai MTA. <br/>Maklumat Tambahan tentang konfigurasi Rangkaian Dipercayai MTA boleh ditemui di <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2774,3 +2776,11 @@ ERROR_InvalidRPLifetime = Julat mestilah integer positif.
 ERROR_RPExists = Polisi "{0}" sudah wujud.
 multiple_servers = berbilang pelayan
 
+Two_Factor_Authentication = Pengesahan Dua Faktor
+LBL_Two_Step_Authentication = Pengesahan Dua Langkah
+LBL_Enable_Two_Factor_Authentication = Dayakan pengesahan dua faktor
+LBL_Two_Factor_Authentication_Active = Aktif
+LBL_Require_Two_Step_Authentication = Perlukan pengesahan dua langkah
+LBL_Number_Of_One_Time_Codes = Bilangan kod sekali untuk menjana:
+MSG_Number_Of_One_Time_Codes = Bilangan kod sekali untuk menjana
+LBL_Enable_Application_Passcodes = Dayakan kod laluan aplikasi
