--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -478,6 +478,7 @@ OVP_related = Gerelateerd
 OVP_recent = Recente objecten
 OVP_allSearchResult = Alle resultaten
 OVP_accountSearchResult = Accounts
+OVP_aliasSearchResult = Aliassen
 OVP_domainSearchResult = Domeinen
 OVP_searchOption = Zoekopties
 OVP_savedSearch = Opgeslagen zoekopdrachten
@@ -678,11 +679,15 @@ PQ_Delete_tt = Alle berichten in deze wachtrij op deze server verwijderen
 
 Alert_MoreResultsAvailable = Meer dan {0} resultaten gevonden. Spits<br/>het zoeken verder toe door een<br/>domeinnaam te typen. 
 Alert_ServerDetails = <b>Let op:</b> Instellingen op een afzonderlijke server hebben voorrang op algemene instellingen.
-Alert_GlobalConfig = <b>Let op:</b> De instellingen zijn alleen van toepassing op servers waarop de vereiste services zijn ge\u00efnstalleerd en ingeschakeld. Instellingen van de server hebben voorrang op algemene instellingen.
+Alert_GlobalConfig = \
+    <b>Let op:</b> \
+    De instellingen zijn alleen van toepassing op servers waarop de vereiste services \
+     zijn ge\u00efnstalleerd en ingeschakeld. Instellingen die zijn toegepast op servers, domeinen en serviceklassen negeren algemene instellingen.
 Alert_ServerRestart = \
 	<b>Waarschuwing:</b> \
 	Wijzigingen in instellingen worden pas van kracht nadat de server opnieuw is gestart.
-Alert_ProxyConfig = <b>Opmerking:</b> Alleen configureerbaar als proxy is ge\u00efnstalleerd en ingeschakeld. Wijzigingen in instellingen worden pas van kracht nadat proxy opnieuw is gestart.
+Alert_ProxyConfig = \
+    <b>Waarschuwing:</b> Om wijzigingen die aan deze instellingen zijn aangebracht van kracht laten worden, moet de proxy opnieuw worden opgestart.
 Alert_AmavisdRestart = <b>Opmerking:</b> Wijzigingen in instellingen worden pas van kracht nadat amavisd opnieuw is gestart.
 Alert_HSM = <b>N.B.: </b> Je kunt een HSM-sessie handmatig starten door te drukken op de knop \u201eHSM-sessie starten\u201d. Tevens kunnen HSM-sessies voor servers worden gepland met behulp van cron-taken. <br>
 Alert_InternalPassword = <b>N.B.:</b> Deze instellingen hebben geen invloed op wachtwoorden die zijn ingesteld door gebruikers die zijn geconfigureerd voor gebruik van externe verificatie.
@@ -830,7 +835,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = Antivirus
 NAD_Service_AntiSpam = Anti-spam
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = Logger
 NAD_Service_Spell = Spellingcontrole
 NAD_Service_Imapproxy = Omgekeerde proxy
@@ -1206,6 +1210,7 @@ NAD_MailOptions = E-mailopties
 NAD_MailOptionsStandardClient = Standaard-client (HTML)
 NAD_ContactsOptions = Contactopties
 NAD_CalendarOptions = Agendaopties
+NAD_ChatOptions = Chatopties
 NAD_MailOptionsSending = E-mail verzenden
 NAD_MailOptionsReceiving = E-mail ontvangen
 NAD_MailOptionsComposing = E-mail opstellen
@@ -1344,7 +1349,7 @@ NAD_zimbraSearchFeature = Zoekfuncties
 LBL_zimbraFeatureNotebookEnabled = Documenten
 LBL_zimbraFeatureBriefcasesEnabled = Aktetas
 LBL_zimbraFeatureHtmlComposeEnabled = Opstellen in HTML
-LBL_zimbraFeatureChatEnabled = Instant Messenger
+LBL_zimbraFeatureChatEnabled = Chatten
 LBL_zimbraFeatureInstantNotify = Onmiddelijke kennisgeveningen
 LBL_zimbraPrefIMAutoLogin = Automatisch inloggen op IM-services
 NAD_Feature = Functie: 
@@ -1468,6 +1473,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Lijst met tijdzones in afsprakenweerga
 LBL_zimbraPrefImapSearchFoldersEnabled = IMAP-zoekmappen weergeven
 LBL_zimbraPrefMailForwardingAddress = Door gebruiker opgegeven doorstuuradressen:
 LBL_zimbraPrefMailForwardingAddressMsg = Door gebruiker opgegeven doorstuuradressen
+LBL_zimbraPrefChatPlaySound = Meldingsgeluid afspelen
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Er moet minimaal \u00e9\u00e9n doorstuuradres worden opgegeven als je ervoor kiest geen lokale kopie\u00ebn van berichten te bewaren.
 
@@ -1753,6 +1759,7 @@ ERROR_DL_NAME_INVALID = De opgegeven naam voor de distributielijst is ongeldig.
 ERROR_INVALID_VOLUME_PATH = Het opgegeven volumepad is ongeldig!
 ERROR_NO_SUCH_VOLUME = Het opgegeven volume bestaat niet!
 ERROR_VOLUME_ALREADY_EXISTS = Het opgegeven volume bestaat al!
+ERROR_MAX_ACCOUNT_QUOTA = Ongeldige waarde voor accountquotum! Accountquotum overschrijdt het maximumaantal voor een mailquotum dat de domeinbeheerder voor een gebruiker kan instellen.
 
 ERROR_LICENSE = Licentiefout opgetreden 
 ERROR_NO_VALID_SUBNETS = Error! Waarde {0} is niet een geldige lijst van subnetten. Raadpleeg de documentatie voor hulp voor het configureren van MTA Trusted Networks. <br/>Verdere informatie over configuratie van MTA Trusted Networks vindt je op URL: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2668,3 +2675,11 @@ ERROR_InvalidRPLifetime = Het bereik moet een positief geheel getal zijn.
 ERROR_RPExists = Beleid "{0}" bestaat al.
 multiple_servers = meerdere servers
 
+Two_Factor_Authentication = Tweeledige verificatie
+LBL_Two_Step_Authentication = Tweestapsverificatie
+LBL_Enable_Two_Factor_Authentication = Tweeledige verificatie inschakelen
+LBL_Two_Factor_Authentication_Active = Actief
+LBL_Require_Two_Step_Authentication = Tweestapsverificatie vereisen
+LBL_Number_Of_One_Time_Codes = Aantal te genereren eenmalige codes:
+MSG_Number_Of_One_Time_Codes = Aantal te genereren eenmalige codes
+LBL_Enable_Application_Passcodes = Wachtwoordcodes voor toepassingen inschakelen
