--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -484,6 +484,7 @@ OVP_related = Pokrewne
 OVP_recent = Niedawne obiekty
 OVP_allSearchResult = Wszystkie wyniki
 OVP_accountSearchResult = Konta
+OVP_aliasSearchResult = Aliasy
 OVP_domainSearchResult = Domeny
 OVP_searchOption = Opcje wyszukiwania
 OVP_savedSearch = Zapisane wyszukiwania
@@ -690,14 +691,14 @@ Alert_MoreResultsAvailable = Znaleziono ponad {0} wynik\u00f3w.<br/> Zaw\u0119\u
 Alert_ServerDetails = \
  <b>Uwaga:</b> Ustawienia na pojedynczym serwerze maj\u0105 wy\u017cszy priorytet ni\u017c globalne ustawienia.
 Alert_GlobalConfig = \
- <b>Uwaga:</b> \
- Ustawienia maj\u0105 zastosowanie tylko do serwer\u00f3w, kt\u00f3re posiadaj\u0105 odpowiednie us\u0142ugi w\u0142\u0105czone i zainstalowane. Ustawienia serwera maj\u0105 wy\u017cszy priorytet ni\u017c ustawienia globalne.
+    <b>Uwaga:</b> \
+    Ustawienia dotycz\u0105 jedynie serwer\u00f3w, na kt\u00f3rych\
+s\u0105 zainstalowane i w\u0142\u0105czone odpowiednie us\u0142ugi. Ustawienia zastosowane do serwer\u00f3w, domen i klas us\u0142ug maj\u0105 priorytet nad ustawieniami globalnymi.
 Alert_ServerRestart = \
 	<b>Ostrze\u017cenie:</b> \
 	zmiany ustawie\u0144 zaczynaj\u0105 obowi\u0105zywa\u0107 po ponownym uruchomieniu serwera.
 Alert_ProxyConfig = \
-	<b>Uwaga:</b> \
-	Konfiguracja jest mo\u017cliwa tylko po instalacji i aktywacji serwera proxy. Zmiany ustawie\u0144 zaczynaj\u0105 dzia\u0142a\u0107 po ponownym uruchomieniu serwera.
+    <b>Ostrze\u017cenie:</b> Zastosowanie tych zmian wymaga ponownego uruchomienia serwera proxy.
 Alert_AmavisdRestart = \
 	<b>Uwaga:</b> \
 	Zmiany ustawie\u0144 zaczynaj\u0105 dzia\u0142a\u0107 po ponownym uruchomieniu amavisd.
@@ -855,7 +856,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = Antywirus
 NAD_Service_AntiSpam = Antyspam
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = Dziennik
 NAD_Service_Spell = Sprawdzanie pisowni
 NAD_Service_Imapproxy = Odwrotny serwer proxy
@@ -1231,6 +1231,7 @@ NAD_MailOptions = Ustawienia Poczty
 NAD_MailOptionsStandardClient = Klient standardowy (HTML)
 NAD_ContactsOptions = Opcje kontakt\u00f3w
 NAD_CalendarOptions = Ustawienia kalendarza
+NAD_ChatOptions = Opcje czatu
 NAD_MailOptionsSending = Wysy\u0142anie poczty
 NAD_MailOptionsReceiving = Odbieranie poczty
 NAD_MailOptionsComposing = Tworzenie poczty
@@ -1369,7 +1370,7 @@ NAD_zimbraSearchFeature = Funkcje wyszukiwania
 LBL_zimbraFeatureNotebookEnabled = Dokumenty
 LBL_zimbraFeatureBriefcasesEnabled = Akt\u00f3wka
 LBL_zimbraFeatureHtmlComposeEnabled = Tw\u00f3rz HTML
-LBL_zimbraFeatureChatEnabled = Komunikator do obs\u0142ugi wiadomo\u015bci b\u0142yskawicznych
+LBL_zimbraFeatureChatEnabled = Czat
 LBL_zimbraFeatureInstantNotify = Powiadomienia w wiadomo\u015bciach b\u0142yskawicznych
 LBL_zimbraPrefIMAutoLogin = Automatycznie zaloguj w us\u0142ugach komunikatora internetowego
 NAD_Feature = Funkcja: 
@@ -1493,6 +1494,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Poka\u017c list\u0119 stref czasowych 
 LBL_zimbraPrefImapSearchFoldersEnabled = Poka\u017c foldery wyszukiwania IMAP
 LBL_zimbraPrefMailForwardingAddress = Adresy przekazywania okre\u015blone przez u\u017cytkownika:
 LBL_zimbraPrefMailForwardingAddressMsg = Adresy przekazywania okre\u015blone przez u\u017cytkownika
+LBL_zimbraPrefChatPlaySound = Odtwarzaj d\u017awi\u0119k powiadomienia
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Je\u015bli nie maj\u0105 by\u0107 zachowywane lokalne kopie wiadomo\u015bci, nale\u017cy okre\u015bli\u0107 co najmniej jeden adres przekazywania.
 
@@ -1785,6 +1787,7 @@ ERROR_DL_NAME_INVALID = Podana nazwa listy dystrybucyjnej ju\u017c istnieje.
 ERROR_INVALID_VOLUME_PATH = Podana \u015bcie\u017cka woluminu jest niepoprawna!
 ERROR_NO_SUCH_VOLUME = Podany wolumin nie istnieje!
 ERROR_VOLUME_ALREADY_EXISTS = Podany wolumin ju\u017c istnieje!
+ERROR_MAX_ACCOUNT_QUOTA = Nieprawid\u0142owa warto\u015b\u0107 limitu pojemno\u015bci konta! Limit pojemno\u015bci konta przekracza maksymaln\u0105 pojemno\u015b\u0107 poczty, jak\u0105 administrator domeny mo\u017ce okre\u015bli\u0107 dla u\u017cytkownika.
 
 ERROR_LICENSE = Wyst\u0105pi\u0142 b\u0142\u0105d licencji 
 ERROR_NO_VALID_SUBNETS = B\u0142\u0105d! Warto\u015b\u0107 {0} nie jest prawid\u0142ow\u0105 warto\u015bci\u0105 podsieci. Informacje na temat konfigurowania opcji Zaufane sieci MTA znajduj\u0105 si\u0119 w dokumentacji. <br/>Dodatkowe informacje na temat konfigurowania opcji Zaufane sieci MTA mo\u017cna znale\u017a\u0107 pod adresem <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2762,3 +2765,11 @@ ERROR_InvalidRPLifetime = Przedzia\u0142 musi stanowi\u0107 dodatni\u0105 liczb\
 ERROR_RPExists = Zasada "{0}" ju\u017c istnieje.
 multiple_servers = grupy serwer\u00f3w
 
+Two_Factor_Authentication = Uwierzytelnianie dwuczynnikowe
+LBL_Two_Step_Authentication = Uwierzytelnianie dwuetapowe
+LBL_Enable_Two_Factor_Authentication = W\u0142\u0105cz uwierzytelnianie dwuczynnikowe
+LBL_Two_Factor_Authentication_Active = Aktywne
+LBL_Require_Two_Step_Authentication = Wymagaj uwierzytelniania dwuetapowego
+LBL_Number_Of_One_Time_Codes = Liczba kod\u00f3w jednorazowych do wygenerowania:
+MSG_Number_Of_One_Time_Codes = Liczba kod\u00f3w jednorazowych do wygenerowania
+LBL_Enable_Application_Passcodes = W\u0142\u0105cz kody dost\u0119pu do aplikacji
