--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -478,6 +478,7 @@ OVP_related = Referente
 OVP_recent = Objetos Recentes
 OVP_allSearchResult = Todos os resultados
 OVP_accountSearchResult = Contas
+OVP_aliasSearchResult = Nomes alternativos
 OVP_domainSearchResult = Dom\u00ednios
 OVP_searchOption = Buscar op\u00e7\u00f5es
 OVP_savedSearch = Buscas salvas
@@ -678,11 +679,15 @@ PQ_Delete_tt = Apagar todas as mensagens nesta fila neste servidor
 
 Alert_MoreResultsAvailable = Encontrados mais de {0} resultados.<br/> Detalhe mais a busca. 
 Alert_ServerDetails = <b>Observa\u00e7\u00e3o:</b> As configura\u00e7\u00f5es de um servidor individual substituem as globais.
-Alert_GlobalConfig = <b>Observa\u00e7\u00e3o:</b> As configura\u00e7\u00f5es aplicam-se apenas aos servidores com o(s) servi\u00e7o(s) adequado(s) instalado(s) e ativado(s). As configura\u00e7\u00f5es do servidor substituem as configura\u00e7\u00f5es globais.
+Alert_GlobalConfig = \
+    <b>Observa\u00e7\u00e3o:</b> \
+    As configura\u00e7\u00f5es aplicam-se apenas aos servidores com o(s) servi\u00e7o(s) adequado(s) \
+    instalado(s) e ativado(s). As configura\u00e7\u00f5es aplicadas a servidores, dom\u00ednios e classes de servi\u00e7o substituem as configura\u00e7\u00f5es globais.
 Alert_ServerRestart = \
 	<b>Aviso:</b> \
 	\u00c9 necess\u00e1rio reiniciar o servidor para que altera\u00e7\u00f5es de configura\u00e7\u00f5es entrem em vigor.
-Alert_ProxyConfig = <b>Observa\u00e7\u00e3o:</b> Configur\u00e1vel somente quando o proxy estiver instalado e ativado. Para que as altera\u00e7\u00f5es de configura\u00e7\u00e3o entrem em vigor, ser\u00e1 preciso reiniciar o proxy.
+Alert_ProxyConfig = \
+    <b>Aviso:</b> \u00e9 necess\u00e1rio reiniciar o proxy para que altera\u00e7\u00f5es nessas configura\u00e7\u00f5es entrem em vigor.
 Alert_AmavisdRestart = <b>Observa\u00e7\u00e3o:</b> Para que as altera\u00e7\u00f5es de configura\u00e7\u00e3o entrem em vigor, ser\u00e1 preciso reiniciar o amavisd.
 Alert_HSM = <b>Observa\u00e7\u00e3o:</b> \u00e9 poss\u00edvel iniciar uma sess\u00e3o HSM manualmente pressionando o bot\u00e3o \u201cIniciar sess\u00e3o HSM\u201d. As sess\u00f5es HSM tamb\u00e9m podem ser programadas nos servidores atrav\u00e9s de agendadores de tarefas. <br>
 Alert_InternalPassword = <b>Observa\u00e7\u00e3o:</b> Estas configura\u00e7\u00f5es n\u00e3o afetam as senhas definidas pelos usu\u00e1rios nos dom\u00ednios que est\u00e3o configurados para usar autentica\u00e7\u00e3o externa.
@@ -830,7 +835,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = Antiv\u00edrus
 NAD_Service_AntiSpam = Anti-Spam
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = Logger
 NAD_Service_Spell = Verificador ortogr\u00e1fico
 NAD_Service_Imapproxy = Proxy reverso
@@ -1206,6 +1210,7 @@ NAD_MailOptions = Op\u00e7\u00f5es de e-mail
 NAD_MailOptionsStandardClient = Cliente padr\u00e3o (HTML)
 NAD_ContactsOptions = Op\u00e7\u00f5es dos contatos
 NAD_CalendarOptions = Op\u00e7\u00f5es da agenda
+NAD_ChatOptions = Op\u00e7\u00f5es de bate-papo
 NAD_MailOptionsSending = Envio de e-mails
 NAD_MailOptionsReceiving = Recebimento de e-mails
 NAD_MailOptionsComposing = Composi\u00e7\u00e3o de e-mails
@@ -1344,7 +1349,7 @@ NAD_zimbraSearchFeature = Recursos de busca
 LBL_zimbraFeatureNotebookEnabled = Documentos
 LBL_zimbraFeatureBriefcasesEnabled = Porta-arquivos
 LBL_zimbraFeatureHtmlComposeEnabled = Escrever em formato HTML
-LBL_zimbraFeatureChatEnabled = Sistema de troca de mensagens instant\u00e2neas
+LBL_zimbraFeatureChatEnabled = Bate-papo
 LBL_zimbraFeatureInstantNotify = Notifica\u00e7\u00f5es instant\u00e2neas
 LBL_zimbraPrefIMAutoLogin = Efetuar o login automaticamente nos servi\u00e7os de mensagem instant\u00e2nea
 NAD_Feature = Recurso: 
@@ -1468,6 +1473,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Mostrar a lista de fusos hor\u00e1rios
 LBL_zimbraPrefImapSearchFoldersEnabled = Exibir as pastas da busca IMAP
 LBL_zimbraPrefMailForwardingAddress = Endere\u00e7os de encaminhamento especificados pelo usu\u00e1rio:
 LBL_zimbraPrefMailForwardingAddressMsg = Endere\u00e7os de encaminhamento especificados pelo usu\u00e1rio
+LBL_zimbraPrefChatPlaySound = Reproduzir som de notifica\u00e7\u00e3o
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Pelo menos um endere\u00e7o de encaminhamento deve ser especificado quando escolher n\u00e3o manter c\u00f3pias locais de mensagens.
 
@@ -1753,6 +1759,7 @@ ERROR_DL_NAME_INVALID = O nome especificado da lista de distribui\u00e7\u00e3o \
 ERROR_INVALID_VOLUME_PATH = O caminho especificado do volume \u00e9 inv\u00e1lido.
 ERROR_NO_SUCH_VOLUME = O volume especificado n\u00e3o existe.
 ERROR_VOLUME_ALREADY_EXISTS = O volume especificado j\u00e1 existe.
+ERROR_MAX_ACCOUNT_QUOTA = Valor inv\u00e1lido para a cota da conta! A cota da conta ultrapassou o valor m\u00e1ximo da cota de e-mails que o administrador do dom\u00ednio pode configurar para um usu\u00e1rio.
 
 ERROR_LICENSE = Foi encontrado um erro de licen\u00e7a 
 ERROR_NO_VALID_SUBNETS = Erro! O valor {0} n\u00e3o \u00e9 uma lista v\u00e1lida de subredes. Consulte a documenta\u00e7\u00e3o para saber como configurar Redes confi\u00e1veis do MTA. <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2668,3 +2675,11 @@ ERROR_InvalidRPLifetime = O intervalo deve ser um n\u00famero inteiro positivo.
 ERROR_RPExists = A pol\u00edtica "{0}" j\u00e1 existe.
 multiple_servers = v\u00e1rios servidores
 
+Two_Factor_Authentication = Autentica\u00e7\u00e3o em dois fatores
+LBL_Two_Step_Authentication = Autentica\u00e7\u00e3o em duas etapas
+LBL_Enable_Two_Factor_Authentication = Ativar autentica\u00e7\u00e3o em dois fatores
+LBL_Two_Factor_Authentication_Active = Ativo
+LBL_Require_Two_Step_Authentication = Exigir autentica\u00e7\u00e3o em duas etapas
+LBL_Number_Of_One_Time_Codes = N\u00famero de c\u00f3digos de uso \u00fanico a serem gerados:
+MSG_Number_Of_One_Time_Codes = N\u00famero de c\u00f3digos de uso \u00fanico a serem gerados
+LBL_Enable_Application_Passcodes = Ativar senhas de aplicativos
