--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -485,6 +485,7 @@ OVP_related = Asociat
 OVP_recent = Obiecte recente
 OVP_allSearchResult = Toate rezultatele
 OVP_accountSearchResult = Conturi
+OVP_aliasSearchResult = Aliasuri
 OVP_domainSearchResult = Domenii
 OVP_searchOption = Op\u0163iuni de c\u0103utare
 OVP_savedSearch = C\u0103ut\u0103ri salvate
@@ -691,15 +692,14 @@ Alert_MoreResultsAvailable = S-au g\u0103sit peste {0} rezultate.<br/> Rafina\u0
 Alert_ServerDetails = \
 	<b>Not\u0103:</b> Set\u0103rile de pe un server individual suprascriu set\u0103rile globale.
 Alert_GlobalConfig = \
-	<b>Not\u0103:</b> \
-	Set\u0103rile se aplic\u0103 doar la serverele pe care serviciile corespunz\u0103toare \
-	sunt instalate \u015fi activate. Set\u0103rile serverului suprascriu set\u0103rile globale.
+    <b>Not\u0103:</b> \
+    Set\u0103rile se aplic\u0103 doar la serverele care au serviciul sau serviciile corespunz\u0103toare \
+ instalate \u0219i activate. Set\u0103rile care s-au aplicat la servere, domenii \u0219i clase de servicii suprascriu set\u0103rile globale.
 Alert_ServerRestart = \
 	<b>Avertisment:</b> \
 	Pentru aplicarea modific\u0103rilor set\u0103rilor este necesar\u0103 repornirea serverului.
 Alert_ProxyConfig = \
-	<b>Not\u0103:</b> \
-	Este configurabil numai atunci c\u00e2nd serviciul proxy este instalat \u015fi activ. Pentru aplicarea modific\u0103rilor set\u0103rilor este necesar\u0103 repornirea serviciului proxy.
+    <b>Avertisment:</b> Aplicarea modific\u0103rilor la aceste set\u0103ri necesit\u0103 repornirea proxy-ului.
 Alert_AmavisdRestart = \
 	<b>Not\u0103:</b> \
 	Pentru aplicarea modific\u0103rilor set\u0103rilor este necesar\u0103 repornirea aplica\u0163iei amavisd.
@@ -863,7 +863,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = Antivirus
 NAD_Service_AntiSpam = Antispam
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = \u00cenregistrator
 NAD_Service_Spell = Corector ortografic
 NAD_Service_Imapproxy = Proxy invers
@@ -1239,6 +1238,7 @@ NAD_MailOptions = Op\u0163iuni pentru mesaje
 NAD_MailOptionsStandardClient = Client standard (HTML)
 NAD_ContactsOptions = Op\u0163iuni pentru contacte
 NAD_CalendarOptions = Op\u0163iuni calendar
+NAD_ChatOptions = Op\u021biuni discu\u021bii
 NAD_MailOptionsSending = Trimitere mesaje
 NAD_MailOptionsReceiving = Primire mesaje
 NAD_MailOptionsComposing = Compunere mesaje
@@ -1377,7 +1377,7 @@ NAD_zimbraSearchFeature = Caracteristicile c\u0103utare
 LBL_zimbraFeatureNotebookEnabled = Documente
 LBL_zimbraFeatureBriefcasesEnabled = Serviet\u0103
 LBL_zimbraFeatureHtmlComposeEnabled = Alc\u0103tuire \u00een HTML
-LBL_zimbraFeatureChatEnabled = Mesagerie instantanee
+LBL_zimbraFeatureChatEnabled = Discu\u021bie
 LBL_zimbraFeatureInstantNotify = Notific\u0103ri instantanee
 LBL_zimbraPrefIMAutoLogin = Autentificare automat\u0103 la serviciile de mesagerie instantanee
 NAD_Feature = Caracteristic\u0103: 
@@ -1501,6 +1501,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Afi\u015fare list\u0103 fusuri orare \
 LBL_zimbraPrefImapSearchFoldersEnabled = Afi\u015fare foldere de c\u0103utare IMAP
 LBL_zimbraPrefMailForwardingAddress = Adrese de redirec\u0163ionare specificate de utilizator:
 LBL_zimbraPrefMailForwardingAddressMsg = Adrese de redirec\u0163ionare specificate de utilizator
+LBL_zimbraPrefChatPlaySound = Redare sunet de notificare
 
 ERROR_missing_zimbraPrefMailForwardingAddress = C\u00e2nd opta\u0163i s\u0103 nu p\u0103stra\u0163i o copie local\u0103 a mesajelor este necesar s\u0103 specifica\u0163i cel pu\u0163in o adres\u0103 pentru redirec\u0163ionare.
 
@@ -1793,6 +1794,7 @@ ERROR_DL_NAME_INVALID = Numele indicat al listei de distribu\u0163ie nu este val
 ERROR_INVALID_VOLUME_PATH = Calea indicat\u0103 a volumului nu este valabil\u0103!
 ERROR_NO_SUCH_VOLUME = Volumul indicat nu exist\u0103!
 ERROR_VOLUME_ALREADY_EXISTS = Volumul indicat exist\u0103 deja!
+ERROR_MAX_ACCOUNT_QUOTA = Valoare nevalabil\u0103 pentru cota contului! Cota contului dep\u0103\u0219e\u0219te valoarea maxim\u0103 de cot\u0103 de e-mail pe care un administrator de domeniu o poate seta pentru un utilizator.
 
 ERROR_LICENSE = A ap\u0103rut o eroare de licen\u0163\u0103 
 ERROR_NO_VALID_SUBNETS = Eroare! Valoarea {0} nu este o list\u0103 valabil\u0103 de subre\u0163ele. Citi\u0163i documenta\u0163ia pentru configurarea re\u0163elelor Trusted MTA. <br/>Pute\u0163i g\u0103si mai multe informa\u0163ii despre configurarea re\u0163elelor Trusted MTA la <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>. Eroare! Valoarea {0} nu este o list\u0103 valabil\u0103 de subre\u0163ele. Citi\u0163i documenta\u0163ia pentru configurarea re\u0163elelor Trusted MTA. <br/>Pute\u0163i g\u0103si mai multe informa\u0163ii despre configurarea re\u0163elelor Trusted MTA la <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2774,3 +2776,11 @@ ERROR_InvalidRPLifetime = Intervalul trebuie s\u0103 fie un num\u0103r \u00eentr
 ERROR_RPExists = Politica \u201e{0}\u201d exist\u0103 deja.
 multiple_servers = servere multiple
 
+Two_Factor_Authentication = Autentificare cu doi factori
+LBL_Two_Step_Authentication = Autentificare \u00een doi pa\u0219i
+LBL_Enable_Two_Factor_Authentication = Activare autentificare cu doi factori
+LBL_Two_Factor_Authentication_Active = Activ
+LBL_Require_Two_Step_Authentication = Necesit\u0103 autentificarea \u00een doi pa\u0219i
+LBL_Number_Of_One_Time_Codes = Num\u0103rul de coduri de unic\u0103 utilizare de generat:
+MSG_Number_Of_One_Time_Codes = Num\u0103rul de coduri de unic\u0103 utilizare de generat
+LBL_Enable_Application_Passcodes = Activare coduri de acces aplica\u021bie
