--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -485,6 +485,7 @@ OVP_related = Sorodno
 OVP_recent = Nedavni predmeti
 OVP_allSearchResult = Vsi rezultati
 OVP_accountSearchResult = Ra\u010duni
+OVP_aliasSearchResult = Vzdevki
 OVP_domainSearchResult = Domene
 OVP_searchOption = Mo\u017enosti iskanja
 OVP_savedSearch = Shranjena iskanja
@@ -691,15 +692,14 @@ Alert_MoreResultsAvailable = Najdeno preko {0} rezultatov.<br/> Bolj natan\u010d
 Alert_ServerDetails = \
 	<b>Opomba:</b> Nastavitve na posameznem stre\u017eniku preglasijo globalne nastavitve.
 Alert_GlobalConfig = \
-	<b>Opomba:</b> \
-	Nastavitve se nana\u0161ajo samo na stre\u017enike, ki imajo name\u0161\u010dene in \
-	omogo\u010dene ustrezne storitve. Nastavitve na stre\u017eniku preglasijo globalne nastavitve.
+    <b>Opomba:</b> \
+    Nastavitve se nana\u0161ajo samo na stre\u017enike, ki imajo name\u0161\u010dene in \
+	omogo\u010dene ustrezne storitve. Nastavitve, uporabljene na stre\u017enikih, domenah in razredih storitev, preglasijo globalne nastavitve.
 Alert_ServerRestart = \
 	<b>Opozorilo:</b> \
 Zaradi sprememb nastavitev je treba stre\u017enik znova zagnati, da bodo spremembe uveljavljene.
 Alert_ProxyConfig = \
-	<b>Opomba:</b> \
-	To je mogo\u010de konfigurirati samo, kadar je proxy name\u0161\u010den in omogo\u010den. Zaradi sprememb nastavitev je treba proxy znova zagnati, da bodo spremembe uveljavljene.
+    <b>Opozorilo:</b> Zaradi sprememb teh nastavitev je treba proxy znova zagnati, da bodo spremembe uveljavljene.
 Alert_AmavisdRestart = \
 	<b>Opomba:</b> \
 Zaradi sprememb nastavitev je treba amavisd znova zagnati, da bodo spremembe uveljavljene.
@@ -1238,6 +1238,7 @@ NAD_MailOptions = Po\u0161tne mo\u017enosti
 NAD_MailOptionsStandardClient = Standardni (HTML) odjemalec
 NAD_ContactsOptions = Mo\u017enosti stikov
 NAD_CalendarOptions = Mo\u017enosti za koledar
+NAD_ChatOptions = Mo\u017enosti za klepet
 NAD_MailOptionsSending = Po\u0161iljanje po\u0161te
 NAD_MailOptionsReceiving = Prejemanje po\u0161te
 NAD_MailOptionsComposing = Sestavljanje sporo\u010dil
@@ -1376,7 +1377,7 @@ NAD_zimbraSearchFeature = Funkcije iskanja
 LBL_zimbraFeatureNotebookEnabled = Dokumenti
 LBL_zimbraFeatureBriefcasesEnabled = Aktovka
 LBL_zimbraFeatureHtmlComposeEnabled = HTML sestavi
-LBL_zimbraFeatureChatEnabled = Program za neposredno sporo\u010danje
+LBL_zimbraFeatureChatEnabled = Klepet
 LBL_zimbraFeatureInstantNotify = Neposredna obvestila
 LBL_zimbraPrefIMAutoLogin = Samodejno se prijavi v storitve za neposredno sporo\u010danje
 NAD_Feature = Funkcija: 
@@ -1500,6 +1501,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Poka\u017ei seznam \u010dasovnih pasov
 LBL_zimbraPrefImapSearchFoldersEnabled = Poka\u017ei IMAP iskalne mape
 LBL_zimbraPrefMailForwardingAddress = Naslovi za posredovanje, ki jih dolo\u010di uporabnik:
 LBL_zimbraPrefMailForwardingAddressMsg = Naslovi za posredovanje, ki jih dolo\u010di uporabnik
+LBL_zimbraPrefChatPlaySound = Zvok, ki naznanja predvajanje
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Kadar izberete, da ne boste obdr\u017eali lokalnih kopij sporo\u010dil, mora biti izbran vsaj en naslov za posredovanje.
 
@@ -1792,6 +1794,7 @@ ERROR_DL_NAME_INVALID = Navedeno ime distribucijskega seznama ni veljavno.
 ERROR_INVALID_VOLUME_PATH = Navedena pot nosilca ni veljavna!
 ERROR_NO_SUCH_VOLUME = Navedeni nosilec ne obstaja!
 ERROR_VOLUME_ALREADY_EXISTS = Navedeni nosilec \u017ee obstaja!
+ERROR_MAX_ACCOUNT_QUOTA = Neveljavna vrednost za dele\u017e ra\u010duna! Dele\u017e ra\u010duna presega maksimalno vrednost za po\u0161to, ki jo skrbnik domene lahko nastavi na uporabniku.
 
 ERROR_LICENSE = Pri\u0161lo je do napake licence 
 ERROR_NO_VALID_SUBNETS = Napaka! Vrednost {0} ni veljaven seznam podomre\u017eij. Za pomo\u010d pri konfiguriranju MTA zaupanja vrednih omre\u017eij si poglejte dokumentacijo. <br/>Dodatne informacije o konfiguriranju MTA zaupanja vrednih omre\u017eij lahko najdete na <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2773,3 +2776,11 @@ ERROR_InvalidRPLifetime = Razpon mora biti pozitivno celo \u0161tevilo.
 ERROR_RPExists = Pravilnik "{0}"  \u017ee obstaja.
 multiple_servers = ve\u010d stre\u017enikov
 
+Two_Factor_Authentication = Dvofaktorsko preverjanje
+LBL_Two_Step_Authentication = Dvostopenjsko preverjanje
+LBL_Enable_Two_Factor_Authentication = Omogo\u010di dvofaktorsko preverjanje
+LBL_Two_Factor_Authentication_Active = Aktivno
+LBL_Require_Two_Step_Authentication = Zahtevaj dvostopenjsko preverjanje
+LBL_Number_Of_One_Time_Codes = \u0160tevilo enkratnih kod, ki jih je potrebno ustvariti:
+MSG_Number_Of_One_Time_Codes = \u0160tevilo enkratnih kod, ki jih je potrebno ustvariti
+LBL_Enable_Application_Passcodes = Omogo\u010di gesla za aplikacije
