--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -478,6 +478,7 @@ OVP_related = Relaterat
 OVP_recent = Senaste objekt
 OVP_allSearchResult = Alla resultat
 OVP_accountSearchResult = Konton
+OVP_aliasSearchResult = Alias
 OVP_domainSearchResult = Dom\u00e4ner
 OVP_searchOption = S\u00f6kalternativ
 OVP_savedSearch = Sparade s\u00f6kningar
@@ -678,11 +679,15 @@ PQ_Delete_tt = Ta bort alla meddelanden i den h\u00e4r k\u00f6n p\u00e5 den h\u0
 
 Alert_MoreResultsAvailable = \u00d6ver {0} resultat.<br/> Begr\u00e4nsa s\u00f6kningen genom att <br/>skriva in ett dom\u00e4nnamn. 
 Alert_ServerDetails = <b>Obs!</b> Inst\u00e4llningarna p\u00e5 en enskild server \u00e5sidos\u00e4tter de globala inst\u00e4llningarna.
-Alert_GlobalConfig = <b>Obs!</b> Inst\u00e4llningarna g\u00e4ller bara servrar som har r\u00e4tt tj\u00e4nster installerade och aktiverade. Serverinst\u00e4llningarna \u00e5sidos\u00e4tter de globala inst\u00e4llningarna.
+Alert_GlobalConfig = \
+    <b>Anteckning:</b> \
+    Inst\u00e4llningarna g\u00e4ller bara servrar som har r\u00e4tt tj\u00e4nster \
+ installerade och aktiverade. Inst\u00e4llningar som g\u00e4ller f\u00f6r servrar, dom\u00e4ner och serviceklasser \u00e5sidos\u00e4tter globala inst\u00e4llningar.
 Alert_ServerRestart = \
 	<b>Varning!</b> \
 	\u00c4ndringar i inst\u00e4llningarna kr\u00e4ver att serverns startas om innan de aktiveras.
-Alert_ProxyConfig = <b>Obs!</b> Detta g\u00e5r endast att konfigurera n\u00e4r en proxy har installerats och aktiverats. Proxyn m\u00e5ste startas om f\u00f6r att \u00e4ndringar av inst\u00e4llningarna ska tr\u00e4da i kraft.
+Alert_ProxyConfig = \
+    <b>Varning!</b> \u00c4ndringar av dessa inst\u00e4llningar kr\u00e4ver att proxyservern startas om innan de aktiveras.
 Alert_AmavisdRestart = <b>Obs!</b> F\u00f6r att \u00e4ndringar av inst\u00e4llningarna ska tr\u00e4da i kraft m\u00e5ste amavisd startas om.
 Alert_HSM = <b>Obs!</b> Du kan initiera en HSM-session manuellt genom att klicka p\u00e5 knappen \u201dStarta HSM-session\u201d. Du kan ocks\u00e5 schemal\u00e4gga HSM-sessioner p\u00e5 servrar via cron-jobb. <br>
 Alert_InternalPassword = <b>Obs!</b> De h\u00e4r inst\u00e4llningarna p\u00e5verkar inte de l\u00f6senord som angetts av anv\u00e4ndare i dom\u00e4ner som \u00e4r konfigurerade f\u00f6r extern autentisering.
@@ -831,7 +836,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = Antivirus
 NAD_Service_AntiSpam = Antispam
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = Loggning
 NAD_Service_Spell = Stavningskontroll
 NAD_Service_Imapproxy = Omv\u00e4nd proxy
@@ -1207,6 +1211,7 @@ NAD_MailOptions = E-postalternativ
 NAD_MailOptionsStandardClient = Standard (HTML)-klient
 NAD_ContactsOptions = Alternativ f\u00f6r kontakter
 NAD_CalendarOptions = Alternativ f\u00f6r kalender
+NAD_ChatOptions = Chattalternativ
 NAD_MailOptionsSending = Skicka e-post
 NAD_MailOptionsReceiving = Ta emot e-post
 NAD_MailOptionsComposing = Skriva e-post
@@ -1345,7 +1350,7 @@ NAD_zimbraSearchFeature = S\u00f6kfunktioner
 LBL_zimbraFeatureNotebookEnabled = Dokument
 LBL_zimbraFeatureBriefcasesEnabled = Portf\u00f6lj
 LBL_zimbraFeatureHtmlComposeEnabled = Skriv HTML
-LBL_zimbraFeatureChatEnabled = Snabbmeddelanden
+LBL_zimbraFeatureChatEnabled = Chatt
 LBL_zimbraFeatureInstantNotify = Snabbmeddelanden
 LBL_zimbraPrefIMAutoLogin = Logga in p\u00e5 snabbmeddelandetj\u00e4nster automatiskt
 NAD_Feature = Funktion: 
@@ -1469,6 +1474,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Visa lista med tidszoner i m\u00f6tesv
 LBL_zimbraPrefImapSearchFoldersEnabled = Visa mappar f\u00f6r IMAP-s\u00f6kning
 LBL_zimbraPrefMailForwardingAddress = Anv\u00e4ndarspecifik adress f\u00f6r vidarebefordran:
 LBL_zimbraPrefMailForwardingAddressMsg = Anv\u00e4ndarspecifika adresser f\u00f6r vidarebefordran
+LBL_zimbraPrefChatPlaySound = Spela upp meddelandeljud
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Mins en adress f\u00f6r vidarebefordran m\u00e5ste anges om du v\u00e4ljer att inte bevara lokala kopior av meddelanden.
 
@@ -1754,6 +1760,7 @@ ERROR_DL_NAME_INVALID = Det angivna namnet p\u00e5 distributionslistan \u00e4r o
 ERROR_INVALID_VOLUME_PATH = Den angivna volyms\u00f6kv\u00e4gen \u00e4r ogiltig!
 ERROR_NO_SUCH_VOLUME = Den angivna volymen finns inte!
 ERROR_VOLUME_ALREADY_EXISTS = Den angivna volymen finns redan!
+ERROR_MAX_ACCOUNT_QUOTA = Ogiltigt v\u00e4rde f\u00f6r kontokvot! Kontokvoten \u00f6verstiger den maximala e-postkvoten som dom\u00e4nadministrat\u00f6ren kan st\u00e4lla in f\u00f6r en anv\u00e4ndare.
 
 ERROR_LICENSE = Ett licensfel intr\u00e4ffade 
 ERROR_NO_VALID_SUBNETS = Fel. V\u00e4rdet {0} \u00e4r ingen giltig lista \u00f6ver undern\u00e4t. L\u00e4s dokumentationen f\u00f6r att f\u00e5 hj\u00e4lp med att konfigurera betrodda n\u00e4tverk f\u00f6r MTA. <br/>Ytterligare information om konfiguration av betrodda n\u00e4tverk f\u00f6r MTA finns h\u00e4r: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2669,3 +2676,11 @@ ERROR_InvalidRPLifetime = Intervallet m\u00e5ste best\u00e5 av ett positivt helt
 ERROR_RPExists = Principen "{0}" finns redan.
 multiple_servers = flera servrar
 
+Two_Factor_Authentication = Autentisering med tv\u00e5 faktorer
+LBL_Two_Step_Authentication = Autentisering i tv\u00e5 steg
+LBL_Enable_Two_Factor_Authentication = Aktivera autentisering i tv\u00e5 steg
+LBL_Two_Factor_Authentication_Active = Aktiv
+LBL_Require_Two_Step_Authentication = Kr\u00e4ver autentisering i tv\u00e5 steg
+LBL_Number_Of_One_Time_Codes = Antal eng\u00e5ngskoder som ska genereras:
+MSG_Number_Of_One_Time_Codes = Antal eng\u00e5ngskoder som ska genereras
+LBL_Enable_Application_Passcodes = Aktivera programl\u00f6senord
