--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -485,6 +485,7 @@ OVP_related = \u0130lgili
 OVP_recent = Son Nesneler
 OVP_allSearchResult = T\u00fcm Sonu\u00e7lar
 OVP_accountSearchResult = Hesaplar
+OVP_aliasSearchResult = Takma Adlar
 OVP_domainSearchResult = Etki Alanlar\u0131
 OVP_searchOption = Arama Se\u00e7enekleri
 OVP_savedSearch = Kay\u0131tl\u0131 Aramalar
@@ -691,15 +692,14 @@ Alert_MoreResultsAvailable = \u015eundan fazla sonu\u00e7 bulundu: {0}.<br/> L\u
 Alert_ServerDetails = \
 	 <b>Not:</b> Ayr\u0131 bir sunucudaki ayarlar global ayarlar\u0131 ge\u00e7ersiz k\u0131lar.
 Alert_GlobalConfig = \
-	 <b>Not:</b> \
-	 Ayarlar yaln\u0131zca uygun hizmet(ler) in kurulu oldu\u011fu ve etkinle\u015ftirildi\u011fi  \
-	 sunucular i\u00e7in ge\u00e7erlidir. Sunucu ayarlar\u0131 global ayarlar\u0131 ge\u00e7ersiz k\u0131lar.
+    <b>Not:</b> \
+    Ayarlar yaln\u0131zca uygun hizmet(ler)in kurulu oldu\u011fu ve etkinle\u015ftirildi\u011fi  \
+	sunucular i\u00e7in ge\u00e7erlidir. Sunucular, etki alanlar\u0131 ve hizmet s\u0131n\u0131flar\u0131 i\u00e7in ge\u00e7erli olan ayarlar global ayarlar\u0131 ge\u00e7ersiz k\u0131lar.
 Alert_ServerRestart = \
 	<b>Uyar\u0131:</b> \
 	Ayarlardaki de\u011fi\u015fikliklerin y\u00fcr\u00fcrl\u00fc\u011fe girmesi i\u00e7in sunucunun yeniden ba\u015flat\u0131lmas\u0131 gerekir.
 Alert_ProxyConfig = \
-	<b>Not:</b> \
-	Yaln\u0131zca yard\u0131mc\u0131 sunucu y\u00fcklendi\u011finde ve etkinle\u015ftirildi\u011finde yap\u0131land\u0131r\u0131labilir. Ayarlardaki de\u011fi\u015fikliklerin y\u00fcr\u00fcrl\u00fc\u011fe girmesi i\u00e7in yard\u0131mc\u0131 sunucunun yeniden ba\u015flat\u0131lmas\u0131 gerekir.
+    <b>Uyar\u0131:</b> Ayarlardaki de\u011fi\u015fikliklerin ge\u00e7erlilik kazanmas\u0131 i\u00e7in yard\u0131mc\u0131 sunucunun yeniden ba\u015flat\u0131lmas\u0131 gerekir.
 Alert_AmavisdRestart = \
 	<b>Not:</b> \
 	Ayarlardaki de\u011fi\u015fikliklerin y\u00fcr\u00fcrl\u00fc\u011fe girmesi i\u00e7in amavisd'in yeniden ba\u015flat\u0131lmas\u0131 gerekir.
@@ -861,7 +861,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = Vir\u00fcs Koruma
 NAD_Service_AntiSpam = \u0130stenmeyen Posta Engelleme
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = G\u00fcnl\u00fc\u011fe Kaydedici
 NAD_Service_Spell = Yaz\u0131m Denetimcisi
 NAD_Service_Imapproxy = Tersine yard\u0131mc\u0131 sunucu
@@ -1237,6 +1236,7 @@ NAD_MailOptions = Posta Se\u00e7enekleri
 NAD_MailOptionsStandardClient = Standart (HTML) istemcisi
 NAD_ContactsOptions = Ki\u015fi Se\u00e7enekleri
 NAD_CalendarOptions = Takvim Se\u00e7enekleri
+NAD_ChatOptions = Sohbet Se\u00e7enekleri
 NAD_MailOptionsSending = Posta g\u00f6nderme
 NAD_MailOptionsReceiving = Posta alma
 NAD_MailOptionsComposing = Posta olu\u015fturma
@@ -1375,7 +1375,7 @@ NAD_zimbraSearchFeature = Arama \u00d6zellikleri
 LBL_zimbraFeatureNotebookEnabled = Belgeler
 LBL_zimbraFeatureBriefcasesEnabled = Evrak \u00c7antas\u0131
 LBL_zimbraFeatureHtmlComposeEnabled = HTML olu\u015ftur
-LBL_zimbraFeatureChatEnabled = Anl\u0131k Messenger
+LBL_zimbraFeatureChatEnabled = Sohbet
 LBL_zimbraFeatureInstantNotify = Anl\u0131k Bildirimler
 LBL_zimbraPrefIMAutoLogin = Messenger hizmetlerinde otomatik olarak oturum a\u00e7
 NAD_Feature = \u00d6zellik: 
@@ -1499,6 +1499,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Randevu g\u00f6r\u00fcn\u00fcm\u00fcnd
 LBL_zimbraPrefImapSearchFoldersEnabled = IMAP arama klas\u00f6rlerini g\u00f6ster
 LBL_zimbraPrefMailForwardingAddress = Kullan\u0131c\u0131 taraf\u0131ndan belirlenen iletme adresleri:
 LBL_zimbraPrefMailForwardingAddressMsg = Kullan\u0131c\u0131 taraf\u0131ndan belirlenen iletme adresleri
+LBL_zimbraPrefChatPlaySound = Bildirim sesi \u00e7al
 
 ERROR_missing_zimbraPrefMailForwardingAddress = Mesajlar\u0131n yerel kopyas\u0131n\u0131 saklamama se\u00e7ene\u011fi belirlendi\u011finde en az\u0131ndan bir iletme adresi belirtilmelidir.
 
@@ -1791,6 +1792,7 @@ ERROR_DL_NAME_INVALID = Belirtilen da\u011f\u0131t\u0131m listesi ad\u0131 ge\u0
 ERROR_INVALID_VOLUME_PATH = Belirtilen birim yolu ge\u00e7ersiz!
 ERROR_NO_SUCH_VOLUME = Belirtilen birim yok!
 ERROR_VOLUME_ALREADY_EXISTS = Belirtilen birim zaten var!
+ERROR_MAX_ACCOUNT_QUOTA = Hesap kotas\u0131 i\u00e7in ge\u00e7ersiz de\u011fer! Hesap kotas\u0131, etki alan\u0131 y\u00f6neticisinin kullan\u0131c\u0131 ba\u015f\u0131na ayarlayabilece\u011fi posta kotas\u0131 \u00fcst s\u0131n\u0131r\u0131n\u0131 a\u015f\u0131yor.
 
 ERROR_LICENSE = Lisans hatas\u0131yla kar\u015f\u0131la\u015f\u0131ld\u0131 
 ERROR_NO_VALID_SUBNETS = Hata! {0} de\u011feri ge\u00e7erli bir alt a\u011flar listesi de\u011fil. MTA G\u00fcvenilen A\u011flar\u0131 yap\u0131land\u0131rmada yard\u0131m almak i\u00e7in l\u00fctfen belgelere ba\u015fvurun. <br/>MTA G\u00fcvenilir A\u011flar\u0131n yap\u0131land\u0131rmas\u0131yla ilgili ek bilgiye \u015fu adresten eri\u015filebilir: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2768,3 +2770,11 @@ ERROR_InvalidRPLifetime = Aral\u0131k pozitif bir tamsay\u0131 olmal\u0131d\u013
 ERROR_RPExists = "{0}" ilkesi zaten var.
 multiple_servers = birden fazla sunucu
 
+Two_Factor_Authentication = \u0130ki A\u015famal\u0131 Kimlik Do\u011frulama
+LBL_Two_Step_Authentication = \u0130ki Ad\u0131mda Kimlik Do\u011frulama
+LBL_Enable_Two_Factor_Authentication = \u0130ki ad\u0131mda kimlik do\u011frulamas\u0131n\u0131 etkinle\u015ftir
+LBL_Two_Factor_Authentication_Active = Etkin
+LBL_Require_Two_Step_Authentication = \u0130ki ad\u0131mda kimlik do\u011frulama \u00f6zelli\u011fini zorunlu k\u0131l
+LBL_Number_Of_One_Time_Codes = Olu\u015fturulacak tek kullan\u0131ml\u0131k kod say\u0131s\u0131:
+MSG_Number_Of_One_Time_Codes = Olu\u015fturulacak tek kullan\u0131ml\u0131k kod say\u0131s\u0131
+LBL_Enable_Application_Passcodes = Uygulama ge\u00e7i\u015f kodunu etkinle\u015ftir
