--- a/WebRoot/messages/ZaMsg_en_AU.properties
+++ b/WebRoot/messages/ZaMsg_en_AU.properties
@@ -484,6 +484,7 @@ OVP_related = Related
 OVP_recent = Recent Objects
 OVP_allSearchResult = All Result
 OVP_accountSearchResult = Accounts
+OVP_aliasSearchResult = Aliases
 OVP_domainSearchResult = Domains
 OVP_searchOption = Search Options
 OVP_savedSearch = Saved Searches
@@ -690,15 +691,14 @@ Alert_MoreResultsAvailable = Found over {0} results. Please<br/>narrow the searc
 Alert_ServerDetails = \
 	<b>Note:</b> Settings on an individual server override global settings.
 Alert_GlobalConfig = \
-	<b>Note:</b> \
-	Settings only apply to servers that have the appropriate service(s) \
-	installed and enabled. Server settings override global settings.
+    <b>Note:</b> \
+    Settings only apply to servers that have the appropriate service(s) \
+    installed and enabled. Settings applied to servers, domains and classes of service override global settings.
 Alert_ServerRestart = \
 	<b>Warning:</b> \
 	Changes to settings requires server restart in order to take effect.
 Alert_ProxyConfig = \
-	<b>Note:</b> \
-	Only configurable when proxy is installed and enabled. Changes to settings require proxy restart to take effect.
+    <b>Warning:</b> Changes to these settings require proxy restart to take effect.
 Alert_AmavisdRestart = \
 	<b>Note:</b> \
 	Changes to settings requires amavisd restart in order to take effect.
@@ -857,7 +857,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = Anti-Virus
 NAD_Service_AntiSpam = Anti-Spam
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = Logger
 NAD_Service_Spell = Spell Checker
 NAD_Service_Imapproxy = Reverse proxy
@@ -1233,6 +1232,7 @@ NAD_MailOptions = Mail Options
 NAD_MailOptionsStandardClient = Standard (HTML) client
 NAD_ContactsOptions = Contacts Options
 NAD_CalendarOptions = Calendar Options
+NAD_ChatOptions = Chat Options
 NAD_MailOptionsSending = Sending mail
 NAD_MailOptionsReceiving = Receiving mail
 NAD_MailOptionsComposing = Composing mail
@@ -1371,7 +1371,7 @@ NAD_zimbraSearchFeature = Search Features
 LBL_zimbraFeatureNotebookEnabled = Documents
 LBL_zimbraFeatureBriefcasesEnabled = Briefcase
 LBL_zimbraFeatureHtmlComposeEnabled = HTML compose
-LBL_zimbraFeatureChatEnabled = Instant Messenger
+LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = Instant Notifications
 LBL_zimbraPrefIMAutoLogin = Log in automatically to instant messaging services.
 NAD_Feature = Feature: 
@@ -1495,6 +1495,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Show time zone list in appointment vie
 LBL_zimbraPrefImapSearchFoldersEnabled = Show IMAP search folders
 LBL_zimbraPrefMailForwardingAddress = User-specified forwarding addresses:
 LBL_zimbraPrefMailForwardingAddressMsg = User-specified forwarding addresses
+LBL_zimbraPrefChatPlaySound = Play notification sound
 
 ERROR_missing_zimbraPrefMailForwardingAddress = At least one forwarding address must be specified when choosing not to keep local copies of messages.
 
@@ -1787,6 +1788,7 @@ ERROR_DL_NAME_INVALID = The specified distribution list name is invalid.
 ERROR_INVALID_VOLUME_PATH = The specified volume path is invalid!
 ERROR_NO_SUCH_VOLUME = The specified volume does not exist!
 ERROR_VOLUME_ALREADY_EXISTS = The specified volume already exists!
+ERROR_MAX_ACCOUNT_QUOTA = Invalid value for account quota!  Account quota exceeds the maximum mail quota which the domain admin can set for a user.
 
 ERROR_LICENSE = Licence error encountered 
 ERROR_NO_VALID_SUBNETS = Error! Value {0} is not a valid list of subnets. Please consult with documentation for help on configuring MTA Trusted Networks. <br/>Additional information about MTA Trusted Networks configuration can be found at <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2768,3 +2770,11 @@ ERROR_InvalidRPLifetime = The range must be a positive integer.
 ERROR_RPExists = Policy "{0}" already exists.
 multiple_servers = multiple servers
 
+Two_Factor_Authentication = Two-Factor Authentication
+LBL_Two_Step_Authentication = Two-Step Authentication
+LBL_Enable_Two_Factor_Authentication = Enable two-factor authentication
+LBL_Two_Factor_Authentication_Active = Active
+LBL_Require_Two_Step_Authentication = Require two-step authentication
+LBL_Number_Of_One_Time_Codes = Number of one-time codes to generate:
+MSG_Number_Of_One_Time_Codes = Number of one-time codes to generate
+LBL_Enable_Application_Passcodes = Enable application passcodes
