--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -481,6 +481,7 @@ OVP_related = \uad00\ub828 \ud56d\ubaa9
 OVP_recent = \ucd5c\uadfc \uac1c\uccb4
 OVP_allSearchResult = \ubaa8\ub4e0 \uacb0\uacfc
 OVP_accountSearchResult = \uacc4\uc815
+OVP_aliasSearchResult = \ubcc4\uce6d
 OVP_domainSearchResult = \ub3c4\uba54\uc778
 OVP_searchOption = \uac80\uc0c9 \uc635\uc158
 OVP_savedSearch = \uc800\uc7a5\ub41c \uac80\uc0c9
@@ -681,13 +682,15 @@ PQ_Delete_tt = \uc774 \uc11c\ubc84\uc758 \uc774 \ub300\uae30\uc5f4\uc5d0 \uc788\
 
 Alert_MoreResultsAvailable = {0}\uac1c \uc774\uc0c1\uc758 \uacb0\uacfc\ub97c \ucc3e\uc558\uc2b5\ub2c8\ub2e4.<br/> \uac80\uc0c9 \uacb0\uacfc\ub97c \uc881\ud788\uc138\uc694. 
 Alert_ServerDetails = <b>\ucc38\uace0:</b> \uac1c\ubcc4 \uc11c\ubc84\uc758 \uc124\uc815\uc740 \uc804\uc5ed \uc124\uc815\uc744 \ubb34\uc2dc\ud569\ub2c8\ub2e4.
-Alert_GlobalConfig = <b>\ucc38\uace0:</b> \uc801\uc808\ud55c \uc11c\ube44\uc2a4\uac00 \uc124\uce58\ub418\uc5b4 \uc0ac\uc6a9\ub418\uace0 \uc788\ub294 \uc11c\ubc84\uc5d0\ub9cc \uc124\uc815\uc774 \uc801\uc6a9\ub429\ub2c8\ub2e4. \uc11c\ubc84 \uc124\uc815\uc740 \uc804\uc5ed \uc124\uc815\uc744 \ubb34\uc2dc\ud569\ub2c8\ub2e4.
+Alert_GlobalConfig = \
+    <b>\ucc38\uace0:</b> \
+    \uc801\uc808\ud55c \uc11c\ube44\uc2a4\uac00 \uc124\uce58\ub418\uc5b4 \uc0ac\uc6a9\ub418\uace0 \uc788\ub294 \uc11c\ubc84\uc5d0\ub9cc \
+    \uc124\uc815\uc774 \uc801\uc6a9\ub429\ub2c8\ub2e4. \uc11c\ubc84, \ub3c4\uba54\uc778 \ubc0f \uc11c\ube44\uc2a4 \ub4f1\uae09\uc5d0 \uc801\uc6a9\ub41c \uc124\uc815\uc740 \uc804\uc5ed \uc124\uc815\uc744 \ubb34\uc2dc\ud569\ub2c8\ub2e4.
 Alert_ServerRestart = \
 	<b>\uacbd\uace0:</b> \
 	\uc124\uc815 \ubcc0\uacbd\uc0ac\ud56d\uc744 \uc801\uc6a9\ud558\ub824\uba74 \uc11c\ubc84\ub97c \ub2e4\uc2dc \uc2dc\uc791\ud574\uc57c \ud569\ub2c8\ub2e4.
 Alert_ProxyConfig = \
-	<b>\ucc38\uace0:</b> \
-	\ud504\ub85d\uc2dc\uac00 \uc124\uce58\ub418\uc5b4 \uc788\uace0 \uc0ac\uc6a9\ud558\ub3c4\ub85d \uc124\uc815\ub418\uc5b4 \uc788\ub294 \uacbd\uc6b0\uc5d0\ub9cc \uad6c\uc131\ud560 \uc218 \uc788\uc2b5\ub2c8\ub2e4. \ubcc0\uacbd\ud55c \uc124\uc815\uc744 \uc801\uc6a9\ud558\ub824\uba74 \ud504\ub85d\uc2dc\ub97c \ub2e4\uc2dc \uc2dc\uc791\ud574\uc57c \ud569\ub2c8\ub2e4.
+    <b>\uacbd\uace0:</b> \uc774\ub7ec\ud55c \uc124\uc815\uc744 \ubcc0\uacbd\ud55c \ud6c4 \ud504\ub85d\uc2dc\ub97c \ub2e4\uc2dc \uc2dc\uc791\ud574\uc57c \ubcc0\uacbd\uc0ac\ud56d\uc774 \uc801\uc6a9\ub429\ub2c8\ub2e4.
 Alert_AmavisdRestart = \
 	<b>\ucc38\uace0:</b> \
 	\ubcc0\uacbd\ud55c \uc124\uc815\uc744 \uc801\uc6a9\ud558\ub824\uba74 amavisd\ub97c \ub2e4\uc2dc \uc2dc\uc791\ud574\uc57c \ud569\ub2c8\ub2e4.
@@ -841,7 +844,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = \uc548\ud2f0\ubc14\uc774\ub7ec\uc2a4
 NAD_Service_AntiSpam = \uc548\ud2f0\uc2a4\ud338
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = \ub85c\uac70
 NAD_Service_Spell = \ub9de\ucda4\ubc95 \uac80\uc0ac\uae30
 NAD_Service_Imapproxy = \uc5ed\ubc29\ud5a5 \ud504\ub85d\uc2dc
@@ -1217,6 +1219,7 @@ NAD_MailOptions = \uba54\uc77c \uc635\uc158
 NAD_MailOptionsStandardClient = \uc77c\ubc18(HTML) \ud074\ub77c\uc774\uc5b8\ud2b8
 NAD_ContactsOptions = \uc5f0\ub77d\ucc98 \uc635\uc158
 NAD_CalendarOptions = \uc77c\uc815\uad00\ub9ac \uc635\uc158
+NAD_ChatOptions = \ucc44\ud305 \uc635\uc158
 NAD_MailOptionsSending = \uba54\uc77c \ubcf4\ub0b4\uae30
 NAD_MailOptionsReceiving = \uba54\uc77c \ubc1b\uae30
 NAD_MailOptionsComposing = \uba54\uc77c \uc4f0\uae30
@@ -1355,7 +1358,7 @@ NAD_zimbraSearchFeature = \uac80\uc0c9 \uae30\ub2a5
 LBL_zimbraFeatureNotebookEnabled = \ubb38\uc11c
 LBL_zimbraFeatureBriefcasesEnabled = \ud30c\uc77c\ud3f4\ub354
 LBL_zimbraFeatureHtmlComposeEnabled = HTML \uc791\uc131
-LBL_zimbraFeatureChatEnabled = \uba54\uc2e0\uc800
+LBL_zimbraFeatureChatEnabled = \ucc44\ud305
 LBL_zimbraFeatureInstantNotify = \uc989\uc2dc \uc54c\ub9bc
 LBL_zimbraPrefIMAutoLogin = \uba54\uc2e0\uc800 \uc11c\ube44\uc2a4\uc5d0 \uc790\ub3d9\uc73c\ub85c \ub85c\uadf8\uc778
 NAD_Feature = \uae30\ub2a5: 
@@ -1479,6 +1482,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = \uc57d\uc18d \ubcf4\uae30\uc5d0 \uc2dc
 LBL_zimbraPrefImapSearchFoldersEnabled = IMAP \uac80\uc0c9 \ud3f4\ub354 \ud45c\uc2dc
 LBL_zimbraPrefMailForwardingAddress = \uc0ac\uc6a9\uc790\uac00 \uc9c0\uc815\ud55c \uc804\ub2ec \uc8fc\uc18c:
 LBL_zimbraPrefMailForwardingAddressMsg = \uc0ac\uc6a9\uc790\uac00 \uc9c0\uc815\ud55c \uc804\ub2ec \uc8fc\uc18c
+LBL_zimbraPrefChatPlaySound = \uc54c\ub9bc \uc18c\ub9ac \uc7ac\uc0dd
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \uba54\uc2dc\uc9c0\uc758 \ub85c\uceec \uc0ac\ubcf8\uc744 \ubcf4\uad00\ud558\uc9c0 \uc54a\uae30\ub85c \uc120\ud0dd\ud560 \ub54c \ucd5c\uc18c\ud55c \ud558\ub098\uc758 \uc804\ub2ec \uc8fc\uc18c\ub97c \uc9c0\uc815\ud574\uc57c \ud569\ub2c8\ub2e4.
 
@@ -1764,6 +1768,7 @@ ERROR_DL_NAME_INVALID = \uc9c0\uc815\ud55c \uadf8\ub8f9 \uc774\ub984\uc740 \uc62
 ERROR_INVALID_VOLUME_PATH = \uc9c0\uc815\ud55c \ubcfc\ub968 \uacbd\ub85c\uac00 \uc62c\ubc14\ub974\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4!
 ERROR_NO_SUCH_VOLUME = \uc9c0\uc815\ud55c \ubcfc\ub968\uc774 \uc874\uc7ac\ud558\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4!
 ERROR_VOLUME_ALREADY_EXISTS = \uc9c0\uc815\ud55c \ubcfc\ub968\uc774 \uc774\ubbf8 \uc788\uc2b5\ub2c8\ub2e4!
+ERROR_MAX_ACCOUNT_QUOTA = \uacc4\uc815 \ud560\ub2f9\ub7c9\uc5d0 \uc62c\ubc14\ub974\uc9c0 \uc54a\uc740 \uac12! \uacc4\uc815 \ud65c\ub2f9\ub7c9\uc774 \ub3c4\uba54\uc778 \uad00\ub9ac\uc790\uac00 \uc0ac\uc6a9\uc790\uc5d0 \ub300\ud574 \uc124\uc815\ud560 \uc218 \uc788\ub294 \ucd5c\ub300 \uba54\uc77c \ud560\ub2f9\ub7c9\uc744 \ucd08\uacfc\ud569\ub2c8\ub2e4.
 
 ERROR_LICENSE = \uc0ac\uc6a9\uad8c \uc624\ub958\uac00 \ubc1c\uc0dd\ud588\uc2b5\ub2c8\ub2e4. 
 ERROR_NO_VALID_SUBNETS = \uc624\ub958! {0} \uac12\uc740 \uc62c\ubc14\ub978 \uc11c\ube0c\ub137 \ubaa9\ub85d\uc774 \uc544\ub2d9\ub2c8\ub2e4. MTA\uac00 \uc2e0\ub8b0\ud558\ub294 \ub124\ud2b8\uc6cc\ud06c\ub97c \uad6c\uc131\ud558\ub294 \ub370 \ub300\ud55c \ub3c4\uc6c0\ub9d0\uc740 \uc124\uba85\uc11c\ub97c \ucc38\uc870\ud558\uc138\uc694. <br/>MTA\uac00 \uc2e0\ub8b0\ud558\ub294 \ub124\ud2b8\uc6cc\ud06c \uad6c\uc131\uc5d0 \ub300\ud55c \ucd94\uac00 \uc815\ubcf4\ub294 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\uc5d0\uc11c \ucc3e\uc744 \uc218 \uc788\uc2b5\ub2c8\ub2e4.
@@ -2714,3 +2719,11 @@ ERROR_InvalidRPLifetime = \ubc94\uc704\ub294 \uc591\uc758 \uc815\uc218\uc5ec\uc5
 ERROR_RPExists = "{0}" \uc815\ucc45\uc740 \uc774\ubbf8 \uc788\uc2b5\ub2c8\ub2e4.
 multiple_servers = \uc5ec\ub7ec \uc11c\ubc84
 
+Two_Factor_Authentication = 2\uc911 \uc778\uc99d
+LBL_Two_Step_Authentication = 2\ub2e8\uacc4 \uc778\uc99d
+LBL_Enable_Two_Factor_Authentication = 2\uc911 \uc778\uc99d \uc0ac\uc6a9
+LBL_Two_Factor_Authentication_Active = \ud65c\uc131
+LBL_Require_Two_Step_Authentication = 2\ub2e8\uacc4 \uc778\uc99d \ud544\uc694
+LBL_Number_Of_One_Time_Codes = \uc0dd\uc131\ud560 \uc77c\ud68c\uc131 \ucf54\ub4dc \uc218:
+MSG_Number_Of_One_Time_Codes = \uc0dd\uc131\ud560 \uc77c\ud68c\uc131 \ucf54\ub4dc \uc218
+LBL_Enable_Application_Passcodes = \uc751\uc6a9 \ud504\ub85c\uadf8\ub7a8 \uc554\ud638 \uc0ac\uc6a9
