--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -485,6 +485,7 @@ OVP_related = Relacionado
 OVP_recent = Objectos recentes
 OVP_allSearchResult = Todos os resultados
 OVP_accountSearchResult = Contas
+OVP_aliasSearchResult = Nomes alternativos
 OVP_domainSearchResult = Dom\u00ednios
 OVP_searchOption = Op\u00e7\u00f5es de pesquisa
 OVP_savedSearch = Pesquisas salvas
@@ -691,15 +692,14 @@ Alert_MoreResultsAvailable = Encontrados mais de {0} resultados.<br/> Detalhe ma
 Alert_ServerDetails = \
 	<b>Observa\u00e7\u00e3o:</b> As configura\u00e7\u00f5es de um servidor individual substituem as globais.
 Alert_GlobalConfig = \
-	<b>Observa\u00e7\u00e3o:</b> \
-	As configura\u00e7\u00f5es se aplicam apenas aos servidores com o(s) servi\u00e7o(s) adequado(s) \
-	instalado(s) e activado(s). As configura\u00e7\u00f5es do servidor substituem as configura\u00e7\u00f5es globais.
+    <b>Observa\u00e7\u00e3o:</b> \
+    As defini\u00e7\u00f5es aplicam-se apenas aos servidores com o(s) servi\u00e7o(s) adequado(s) \
+ instalado(s) e ativado(s). As defini\u00e7\u00f5es aplicadas a servidores, dom\u00ednios e classes de servi\u00e7o substituem as defini\u00e7\u00f5es globais.
 Alert_ServerRestart = \
 	<b>Aviso:</b> \
 	As altera\u00e7\u00f5es nas defini\u00e7\u00f5es requerem o rein\u00edcio do servidor para serem aplicadas.
 Alert_ProxyConfig = \
-	<b>Observa\u00e7\u00e3o:</b> \
-	Apenas configur\u00e1vel quando est\u00e1 instalado e activado o proxy. As altera\u00e7\u00f5es \u00e0s defini\u00e7\u00f5es requerem o reiniciar do proxy para entrarem em efeito.
+    <b>Aviso:</b> \u00c9 necess\u00e1rio reiniciar o "proxy" para que as altera\u00e7\u00f5es nestas defini\u00e7\u00f5es entrem em vigor.
 Alert_AmavisdRestart = \
 	<b>Observa\u00e7\u00e3o:</b> \
 	\u00c9 preciso reiniciar o amavisd para que as altera\u00e7\u00f5es de configura\u00e7\u00e3o tenham efeito.
@@ -863,7 +863,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = Antiv\u00edrus
 NAD_Service_AntiSpam = Anti-Spam
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = Logger
 NAD_Service_Spell = Verificador ortogr\u00e1fico
 NAD_Service_Imapproxy = Proxy reverso
@@ -1239,6 +1238,7 @@ NAD_MailOptions = Op\u00e7\u00f5es de e-mail
 NAD_MailOptionsStandardClient = Cliente padr\u00e3o (HTML)
 NAD_ContactsOptions = Op\u00e7\u00f5es dos contactos
 NAD_CalendarOptions = Op\u00e7\u00f5es da agenda
+NAD_ChatOptions = Op\u00e7\u00f5es de chat
 NAD_MailOptionsSending = Enviando e-mail
 NAD_MailOptionsReceiving = Recebendo e-mail
 NAD_MailOptionsComposing = Compondo e-mail
@@ -1372,12 +1372,12 @@ NAD_zimbraGeneralFeature = Recursos gerais
 NAD_zimbraMailFeature = Recursos de e-mail
 NAD_zimbraContactFeature = Funcionalidades de contacto
 NAD_zimbraCalendarFeature = Recursos de agenda
-NAD_zimbraChatFeature = Recursos de MI
+NAD_zimbraChatFeature = Funcionalidades de MI
 NAD_zimbraSearchFeature = Recursos de pesquisa
 LBL_zimbraFeatureNotebookEnabled = Documentos
 LBL_zimbraFeatureBriefcasesEnabled = Porta-ficheiros
 LBL_zimbraFeatureHtmlComposeEnabled = Escrever em formato HTML
-LBL_zimbraFeatureChatEnabled = Instant Messenger
+LBL_zimbraFeatureChatEnabled = Chat
 LBL_zimbraFeatureInstantNotify = Notifica\u00e7\u00f5es instant\u00e2neas
 LBL_zimbraPrefIMAutoLogin = Efetuar o login automaticamente nos servi\u00e7os de mensagem instant\u00e2nea
 NAD_Feature = Recurso:
@@ -1501,6 +1501,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = Exibir a lista de fusos hor\u00e1rios 
 LBL_zimbraPrefImapSearchFoldersEnabled = Exibir as pastas da pesquisa IMAP
 LBL_zimbraPrefMailForwardingAddress = Endere\u00e7os de encaminhamento especificados pelo utilizador:
 LBL_zimbraPrefMailForwardingAddressMsg = Endere\u00e7os de encaminhamento especificados pelo utilizador
+LBL_zimbraPrefChatPlaySound = Reproduzir som de notifica\u00e7\u00e3o
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \u00c9 necess\u00e1rio especificar pelo menos um endere\u00e7o de reencaminhamento ao optar por n\u00e3o guardar c\u00f3pias locais das mensagens.
 
@@ -1532,29 +1533,17 @@ LBL_zimbraPrefCalendarReminderSoundsEnabled = Ativar notifica\u00e7\u00e3o sonor
 MSG_zimbraPrefCalendarReminderSoundsEnabled = Ativar notifica\u00e7\u00e3o sonora de compromisso
 
 LBL_fontFamilySansSerif = Sans Serif
-
-LBL_fontFamilySerif= Serif
-
+LBL_fontFamilySerif = Serif
 LBL_fontFamilyWideBlock = Wide Block
-
 LBL_fontFamilyMonospaced = Monospaced
-
 LBL_fontFamilyComic = Comic
-
 LBL_fontFamilyConsole = Console
-
 LBL_fontFamilyGaramond = Garamond
-
 LBL_fontFamilyElegant = Elegant
-
 LBL_fontFamilyProfessional = Professional
-
 LBL_fontFamilyTerminal = Terminal
-
 LBL_fontFamilyModern = Modern
-
 LBL_fontFamilyWide = Wide
-
 
 AptVisibilityPublic = P\u00fablico
 AptVisibilityPrivate = Particular
@@ -1805,6 +1794,7 @@ ERROR_DL_NAME_INVALID = O nome especificado da lista de distribui\u00e7\u00e3o \
 ERROR_INVALID_VOLUME_PATH = O caminho especificado do volume \u00e9 inv\u00e1lido.
 ERROR_NO_SUCH_VOLUME = O volume especificado n\u00e3o existe.
 ERROR_VOLUME_ALREADY_EXISTS = O volume especificado j\u00e1 existe.
+ERROR_MAX_ACCOUNT_QUOTA = Valor inv\u00e1lido para a quota da conta! A quota da conta ultrapassou o valor m\u00e1ximo da quota de correio que o administrador do dom\u00ednio pode definir para um utilizador.
 
 ERROR_LICENSE = Foi encontrado um erro de licen\u00e7a
 ERROR_NO_VALID_SUBNETS = Erro! O valor {0} n\u00e3o \u00e9 uma lista v\u00e1lida de subredes. Consulte a documenta\u00e7\u00e3o para saber como configurar Redes confi\u00e1veis do MTA. <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
@@ -2139,7 +2129,6 @@ MSG_LabelListName = Nome da lista
 DLXV_LabelListMembers = Membros da lista
 DLXV_TabMembers = Membros
 DLXV_TabProperties = Propriedades
-
 DLXV_LabelEnabled = Pode receber e-mail:
 DLXV_ButtonRemove = Remover
 DLXV_ButtonRemoveAll = Remover todos
@@ -2282,7 +2271,6 @@ Alias_Dlg_label_target_acct = Conta de destino:
 #License
 TBB_UpdateLicense = Actualizar licen\u00e7a
 ALTBB_UpdateLicense_tt = Actualizar a licen\u00e7a usando o assistente de instala\u00e7\u00e3o da chave da licen\u00e7a
- 
 
 #TABS
 tt_tab_View = Visualizar
@@ -2788,3 +2776,11 @@ ERROR_InvalidRPLifetime = O intervalo tem de ser um n\u00famero inteiro positivo
 ERROR_RPExists = A pol\u00edtica "{0}" j\u00e1 existe.
 multiple_servers = v\u00e1rios servidores
 
+Two_Factor_Authentication = Autentica\u00e7\u00e3o de dois factores
+LBL_Two_Step_Authentication = Autentica\u00e7\u00e3o em duas etapas
+LBL_Enable_Two_Factor_Authentication = Activar autentica\u00e7\u00e3o de dois factores
+LBL_Two_Factor_Authentication_Active = Activa
+LBL_Require_Two_Step_Authentication = Requerer autentica\u00e7\u00e3o em duas etapas
+LBL_Number_Of_One_Time_Codes = N\u00famero de c\u00f3digos de utiliza\u00e7\u00e3o \u00fanica a serem gerados:
+MSG_Number_Of_One_Time_Codes = N\u00famero de c\u00f3digos de utiliza\u00e7\u00e3o \u00fanica a serem gerados
+LBL_Enable_Application_Passcodes = Activar c\u00f3digos de acesso de aplica\u00e7\u00f5es
