--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -484,6 +484,7 @@ OVP_related = \u76f8\u5173
 OVP_recent = \u6700\u8fd1\u5bf9\u8c61
 OVP_allSearchResult = \u6240\u6709\u7ed3\u679c
 OVP_accountSearchResult = \u5e10\u6237
+OVP_aliasSearchResult = \u522b\u540d
 OVP_domainSearchResult = \u57df
 OVP_searchOption = \u641c\u7d22\u9009\u9879
 OVP_savedSearch = \u4fdd\u5b58\u7684\u641c\u7d22
@@ -690,15 +691,14 @@ Alert_MoreResultsAvailable = \u627e\u5230\u7684\u7ed3\u679c\u8d85\u8fc7 {0} \u98
 Alert_ServerDetails = \
 	 <b>\u5907\u6ce8\uff1a</b>\u5355\u4e2a\u670d\u52a1\u5668\u7684\u8bbe\u7f6e\u503c\u5c06\u53d6\u4ee3\u5168\u5c40\u8bbe\u7f6e\u3002
 Alert_GlobalConfig = \
-	 <b>\u5907\u6ce8\uff1a</b> \
-	\u8bbe\u7f6e\u503c\u4ec5\u9002\u7528\u4e8e\u5df2\u5b89\u88c5\u5e76\u542f\u7528\u9002\u5f53\u670d\u52a1\u9879\u76ee\u7684\u670d\u52a1\u5668\u3002\
-	\u670d\u52a1\u5668\u7684\u8bbe\u7f6e\u503c\u5c06\u53d6\u4ee3\u5168\u5c40\u8bbe\u7f6e\u3002
+    <b>\u5907\u6ce8:</b> \
+    \u8fd9\u4e9b\u8bbe\u7f6e\u4ec5\u9002\u7528\u4e8e\u5df2\u5b89\u88c5\u6709\u9002\u5f53\u670d\u52a1\u9879\u5e76\
+\u5df2\u542f\u7528\u76f8\u5173\u670d\u52a1\u7684\u670d\u52a1\u5668\u3002\u5e94\u7528\u4e8e\u670d\u52a1\u5668\u3001\u7f51\u57df\u4ee5\u53ca\u670d\u52a1\u7c7b\u578b\u7684\u8bbe\u5b9a\u503c\u53ef\u53d6\u4ee3\u901a\u7528\u8bbe\u5b9a\u503c\u3002
 Alert_ServerRestart = \
 	<b>\u8b66\u544a\uff1a</b> \
 	\u670d\u52a1\u5668\u5fc5\u987b\u91cd\u65b0\u542f\u52a8\uff0c\u8bbe\u7f6e\u66f4\u6539\u624d\u4f1a\u751f\u6548\u3002
 Alert_ProxyConfig = \
-	<b>\u5907\u6ce8:</b> \
-	\u4ec5\u5f53\u5b89\u88c5\u5e76\u542f\u7528\u4ee3\u7406\u540e\uff0c\u624d\u53ef\u914d\u7f6e\u3002\u5bf9\u8bbe\u7f6e\u7684\u66f4\u6539\u9700\u8981\u4ee3\u7406\u91cd\u65b0\u542f\u52a8\u624d\u80fd\u751f\u6548\u3002
+    <b>\u8b66\u544a\uff1a</b> \u5bf9\u8fd9\u4e9b\u8bbe\u5b9a\u503c\u7684\u53d8\u52a8\uff0c\u987b\u5728\u4ee3\u7406\u670d\u52a1\u5668\u91cd\u65b0\u542f\u52a8\u540e\u65b9\u80fd\u751f\u6548\u3002
 Alert_AmavisdRestart = \
 	<b>\u5907\u6ce8:</b> \
 	\u5bf9\u8bbe\u7f6e\u7684\u66f4\u6539\u9700\u8981 amavisd \u91cd\u65b0\u542f\u52a8\u624d\u80fd\u751f\u6548\u3002
@@ -855,7 +855,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = \u9632\u75c5\u6bd2
 NAD_Service_AntiSpam = \u9632\u6b62\u5783\u573e\u90ae\u4ef6
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = \u65e5\u5fd7\u8bb0\u5f55
 NAD_Service_Spell = \u62fc\u5199\u68c0\u67e5
 NAD_Service_Imapproxy = \u53cd\u5411\u4ee3\u7406
@@ -1231,6 +1230,7 @@ NAD_MailOptions = \u90ae\u4ef6\u9009\u9879
 NAD_MailOptionsStandardClient = \u6807\u51c6 (HTML) \u5ba2\u6237\u7aef
 NAD_ContactsOptions = \u8054\u7cfb\u4eba\u9009\u9879
 NAD_CalendarOptions = \u65e5\u5386\u9009\u9879
+NAD_ChatOptions = \u804a\u5929\u529f\u80fd\u9009\u9879
 NAD_MailOptionsSending = \u53d1\u9001\u90ae\u4ef6
 NAD_MailOptionsReceiving = \u63a5\u6536\u90ae\u4ef6
 NAD_MailOptionsComposing = \u7f16\u5199\u90ae\u4ef6
@@ -1369,7 +1369,7 @@ NAD_zimbraSearchFeature = \u641c\u7d22\u529f\u80fd
 LBL_zimbraFeatureNotebookEnabled = \u6587\u6863
 LBL_zimbraFeatureBriefcasesEnabled = \u516c\u6587\u5305
 LBL_zimbraFeatureHtmlComposeEnabled = \u7528 HTML \u5199\u4fe1
-LBL_zimbraFeatureChatEnabled = \u5373\u65f6\u901a
+LBL_zimbraFeatureChatEnabled = \u804a\u5929
 LBL_zimbraFeatureInstantNotify = \u5373\u65f6\u901a\u77e5
 LBL_zimbraPrefIMAutoLogin = \u81ea\u52a8\u767b\u5f55\u5230\u5373\u65f6\u901a\u4fe1\u670d\u52a1
 NAD_Feature = \u529f\u80fd\uff1a 
@@ -1493,6 +1493,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = \u5728\u7ea6\u4f1a\u89c6\u56fe\u4e2d\u
 LBL_zimbraPrefImapSearchFoldersEnabled = \u663e\u793a IMAP \u641c\u7d22\u6587\u4ef6\u5939
 LBL_zimbraPrefMailForwardingAddress = \u7528\u6237\u6307\u5b9a\u7684\u8f6c\u53d1\u5730\u5740\uff1a
 LBL_zimbraPrefMailForwardingAddressMsg = \u7528\u6237\u6307\u5b9a\u7684\u8f6c\u53d1\u5730\u5740
+LBL_zimbraPrefChatPlaySound = \u64ad\u653e\u901a\u77e5\u97f3
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \u9009\u62e9\u4e0d\u4fdd\u7559\u90ae\u4ef6\u7684\u672c\u5730\u526f\u672c\u65f6\uff0c\u5fc5\u987b\u6307\u5b9a\u81f3\u5c11\u4e00\u4e2a\u8f6c\u53d1\u5730\u5740\u3002
 
@@ -1785,6 +1786,7 @@ ERROR_DL_NAME_INVALID = \u6307\u5b9a\u7684\u901a\u8baf\u7ec4\u5217\u8868\u540d\u
 ERROR_INVALID_VOLUME_PATH = \u6307\u5b9a\u7684\u5377\u8def\u5f84\u65e0\u6548!
 ERROR_NO_SUCH_VOLUME = \u6307\u5b9a\u7684\u5377\u4e0d\u5b58\u5728!
 ERROR_VOLUME_ALREADY_EXISTS = \u6307\u5b9a\u7684\u5377\u5df2\u5b58\u5728!
+ERROR_MAX_ACCOUNT_QUOTA = \u5e10\u6237\u9650\u989d\u65e0\u6548\uff01\u5e10\u6237\u9650\u989d\u5df2\u8d85\u8fc7\u57df\u7ba1\u7406\u5458\u80fd\u4e3a\u7528\u6237\u8bbe\u7f6e\u7684\u90ae\u4ef6\u6570\u91cf\u9650\u989d\u4e0a\u9650\u3002
 
 ERROR_LICENSE = \u8bb8\u53ef\u8bc1\u51fa\u73b0\u95ee\u9898 
 ERROR_NO_VALID_SUBNETS = \u9519\u8bef\uff01 \u503c {0} \u5e76\u975e\u6709\u6548\u7684\u5b50\u7f51\u5217\u8868\u3002 \u6709\u5173 MTA \u53ef\u4fe1\u7f51\u7edc\u5728\u914d\u7f6e\u65b9\u9762\u7684\u8bf4\u660e\uff0c\u8bf7\u89c1\u76f8\u5173\u8bf4\u660e\u6587\u6863\u3002 <br/>\u66f4\u591a MTA \u53ef\u4fe1\u7f51\u7edc\u5728\u914d\u7f6e\u65b9\u9762\u7684\u8bf4\u660e\uff0c\u8bf7\u89c1 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
@@ -2759,3 +2761,11 @@ ERROR_InvalidRPLifetime = \u8303\u56f4\u5fc5\u987b\u662f\u6b63\u6574\u6570\u3002
 ERROR_RPExists = \u653f\u7b56\u201c{0}\u201d\u5df2\u5b58\u5728\u3002
 multiple_servers = \u591a\u4e2a\u670d\u52a1\u5668
 
+Two_Factor_Authentication = \u53cc\u56e0\u6570\u9a8c\u8bc1
+LBL_Two_Step_Authentication = \u4e24\u6b65\u9a8c\u8bc1
+LBL_Enable_Two_Factor_Authentication = \u542f\u7528\u53cc\u56e0\u6570\u9a8c\u8bc1
+LBL_Two_Factor_Authentication_Active = \u73b0\u7528
+LBL_Require_Two_Step_Authentication = \u987b\u8fdb\u884c\u4e24\u6b65\u9a8c\u8bc1
+LBL_Number_Of_One_Time_Codes = \u9700\u751f\u6210\u7684\u4e00\u6b21\u6027\u4ee3\u7801\u6570\ufe55
+MSG_Number_Of_One_Time_Codes = \u9700\u751f\u6210\u7684\u4e00\u6b21\u6027\u4ee3\u7801\u6570
+LBL_Enable_Application_Passcodes = \u542f\u7528\u5e94\u7528\u7a0b\u5e8f\u5bc6\u7801
