--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -477,6 +477,7 @@ OVP_related = \u76f8\u95dc\u7684
 OVP_recent = \u6700\u8fd1\u7269\u4ef6
 OVP_allSearchResult = \u6240\u6709\u7d50\u679c
 OVP_accountSearchResult = \u5e33\u6236
+OVP_aliasSearchResult = \u5225\u540d
 OVP_domainSearchResult = \u7db2\u57df
 OVP_searchOption = \u641c\u5c0b\u9078\u9805
 OVP_savedSearch = \u5132\u5b58\u7684\u641c\u5c0b\u9805
@@ -677,11 +678,15 @@ PQ_Delete_tt = \u522a\u9664\u6b64\u4f3a\u670d\u5668\u4e0a\u9019\u500b\u4f47\u521
 
 Alert_MoreResultsAvailable = \u627e\u5230\u7684\u7d50\u679c\u8d85\u904e {0} \u9805\u3002<br/> \u8acb\u7e2e\u5c0f\u641c\u5c0b\u7bc4\u570d\u3002 
 Alert_ServerDetails = <b>\u5099\u8a3b\uff1a</b>\u55ae\u500b\u4f3a\u670d\u5668\u7684\u8a2d\u5b9a\u503c\u5c07\u53d6\u4ee3\u5168\u7db2\u57df\u8a2d\u5b9a\u3002
-Alert_GlobalConfig = <b>\u5099\u8a3b\uff1a</b> \u8a2d\u5b9a\u503c\u50c5\u9069\u7528\u65bc\u5df2\u5b89\u88dd\u4e26\u555f\u7528\u9069\u7576\u670d\u52d9\u9805\u76ee\u7684\u4f3a\u670d\u5668\u3002 \u4f3a\u670d\u5668\u7684\u8a2d\u5b9a\u503c\u5c07\u53d6\u4ee3\u5168\u7db2\u57df\u8a2d\u5b9a\u3002
+Alert_GlobalConfig = \
+    <b>\u5099\u8a3b\uff1a</b> \
+    \u9019\u4e9b\u8a2d\u5b9a\u50c5\u9069\u7528\u65bc\
+\u5df2\u5b89\u88dd\u6709\u9069\u7576\u670d\u52d9\u9805\u4e26\u5df2\u555f\u7528\u76f8\u95dc\u670d\u52d9\u7684\u4f3a\u670d\u5668\u3002\u5957\u7528\u65bc\u4f3a\u670d\u5668\u3001\u7db2\u57df\u4ee5\u53ca\u670d\u52d9\u985e\u578b\u7684\u8a2d\u5b9a\u503c\u53ef\u53d6\u4ee3\u901a\u7528\u8a2d\u5b9a\u503c\u3002
 Alert_ServerRestart = \
 	<b>\u8b66\u544a\uff1a</b> \
 	\u66f4\u6539\u8a2d\u5b9a\u5f8c\u9808\u91cd\u65b0\u555f\u52d5\u4f3a\u670d\u5668\uff0c\u4ee5\u4f7f\u4e4b\u751f\u6548\u3002
-Alert_ProxyConfig = <b>\u5099\u8a3b\uff1a</b> \u53ea\u53ef\u5b89\u88dd\u548c\u5553\u52d5\u4e86 proxy \u624d\u80fd\u8a2d\u5b9a\u3002\u8b8a\u66f4\u8a2d\u5b9a\u9700\u8981\u91cd\u65b0\u5553\u52d5 proxy \u624d\u751f\u6548\u3002
+Alert_ProxyConfig = \
+    <b>\u8b66\u793a\uff1a</b> \u5c0d\u9019\u4e9b\u8a2d\u5b9a\u503c\u7684\u8b8a\u52d5\uff0c\u9808\u5728 proxy \u4f3a\u670d\u5668\u91cd\u65b0\u555f\u52d5\u5f8c\u65b9\u80fd\u751f\u6548\u3002
 Alert_AmavisdRestart = <b>\u5099\u8a3b\uff1a</b> \u8b8a\u66f4\u8a2d\u5b9a\u9700\u8981\u91cd\u65b0\u5553\u52d5 amavisd \u624d\u751f\u6548\u3002
 Alert_HSM = <b>\u5099\u8a3b\uff1a</b> \u4f60\u53ef\u6309\u4e00\u4e0b\u300c\u555f\u52d5 HSM \u6642\u9650\u300d\u6309\u9215\uff0c\u4ee5\u624b\u52d5\u65b9\u5f0f\u555f\u52d5\u4e00\u500b HSM \u6642\u9650\u3002 \u4e5f\u53ef\u900f\u904e\u8a08\u6642\u529f\u80fd\u5728\u4f3a\u670d\u5668\u4e0a\u5b89\u6392 HSM \u6642\u9650\u3002 <br>
 Alert_InternalPassword = <b>\u5099\u8a3b\uff1a</b>\u5c0d\u65bc\u7528\u6236\u5728\u90a3\u4e9b\u88ab\u8a2d\u5b9a\u70ba\u4f7f\u7528\u5916\u90e8\u8a8d\u8b49\u7684\u7db2\u57df\u4e2d\u8a2d\u5b9a\u7684\u5bc6\u78bc\uff0c\u9019\u4e9b\u8a2d\u5b9a\u503c\u5c0d\u5176\u6c92\u6709\u5f71\u97ff\u3002
@@ -831,7 +836,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = \u9632\u96fb\u8166\u75c5\u6bd2
 NAD_Service_AntiSpam = \u9632\u5783\u573e\u90f5\u4ef6
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = \u65e5\u8a8c\u8a18\u9304
 NAD_Service_Spell = \u62fc\u5b57\u6aa2\u67e5
 NAD_Service_Imapproxy = \u53cd\u5411\u4ee3\u7406
@@ -1207,6 +1211,7 @@ NAD_MailOptions = \u90f5\u4ef6\u9078\u9805
 NAD_MailOptionsStandardClient = \u6a19\u6e96 (HTML) \u7528\u6236\u7aef
 NAD_ContactsOptions = \u806f\u7d61\u4eba\u9078\u9805
 NAD_CalendarOptions = \u8a18\u4e8b\u7c3f\u9078\u9805
+NAD_ChatOptions = \u804a\u5929\u529f\u80fd\u9078\u9805
 NAD_MailOptionsSending = \u50b3\u9001\u90f5\u4ef6
 NAD_MailOptionsReceiving = \u63a5\u6536\u90f5\u4ef6
 NAD_MailOptionsComposing = \u64b0\u5beb\u90f5\u4ef6
@@ -1345,7 +1350,7 @@ NAD_zimbraSearchFeature = \u641c\u5c0b\u529f\u80fd
 LBL_zimbraFeatureNotebookEnabled = \u6587\u4ef6
 LBL_zimbraFeatureBriefcasesEnabled = \u516c\u4e8b\u5305
 LBL_zimbraFeatureHtmlComposeEnabled = \u7528 HTML \u5beb\u4fe1
-LBL_zimbraFeatureChatEnabled = \u5373\u6642\u901a
+LBL_zimbraFeatureChatEnabled = \u804a\u5929
 LBL_zimbraFeatureInstantNotify = \u5373\u6642\u901a\u77e5
 LBL_zimbraPrefIMAutoLogin = \u81ea\u52d5\u767b\u5165\u5230\u5373\u6642\u901a\u4fe1\u670d\u52d9
 NAD_Feature = \u529f\u80fd\uff1a 
@@ -1469,6 +1474,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = \u5728\u9810\u7d04\u8996\u7a97\u4e2d\u
 LBL_zimbraPrefImapSearchFoldersEnabled = \u986f\u793a IMAP \u641c\u5c0b\u8cc7\u6599\u593e
 LBL_zimbraPrefMailForwardingAddress = \u7528\u6236\u6307\u5b9a\u7684\u8f49\u5bc4\u5730\u5740\ufe55
 LBL_zimbraPrefMailForwardingAddressMsg = \u7528\u6236\u6307\u5b9a\u7684\u8f49\u5bc4\u5730\u5740
+LBL_zimbraPrefChatPlaySound = \u64ad\u653e\u901a\u77e5\u97f3
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \u82e5\u9078\u64c7\u4e0d\u5728\u672c\u6a5f\u4e0a\u4fdd\u7559\u90f5\u4ef6\u526f\u672c\uff0c\u5247\u9808\u6307\u5b9a\u81f3\u5c11\u4e00\u500b\u8f49\u5bc4\u5730\u5740\u3002
 
@@ -1756,6 +1762,7 @@ ERROR_DL_NAME_INVALID = \u6307\u5b9a\u7684\u5206\u767c\u6e05\u55ae\u540d\u7a31\u
 ERROR_INVALID_VOLUME_PATH = \u6307\u5b9a\u7684\u5377\u518a\u8def\u5f91\u7121\u6548\uff01
 ERROR_NO_SUCH_VOLUME = \u6307\u5b9a\u7684\u5377\u518a\u4e0d\u5b58\u5728\uff01
 ERROR_VOLUME_ALREADY_EXISTS = \u6307\u5b9a\u7684\u5377\u518a\u540d\u7a31\u5df2\u7d93\u5b58\u5728\uff01
+ERROR_MAX_ACCOUNT_QUOTA = \u5e33\u6236\u9650\u984d\u503c\u7121\u6548\uff01\u5e33\u6236\u9650\u984d\u5df2\u8d85\u904e\u7db2\u57df\u7ba1\u7406\u54e1\u80fd\u70ba\u7528\u6236\u8a2d\u5b9a\u7684\u90f5\u4ef6\u6578\u91cf\u9650\u984d\u4e0a\u9650\u3002
 
 ERROR_LICENSE = \u6388\u6b0a\u8a31\u53ef\u51fa\u73fe\u554f\u984c 
 ERROR_NO_VALID_SUBNETS = \u932f\u8aa4\uff01\u503c {0} \u4e26\u975e\u6709\u6548\u7684\u5b50\u7db2\u7d61\u6e05\u55ae\u3002\u6709\u95dc MTA \u53ef\u4fe1\u7db2\u7d61\u5728\u8a2d\u5b9a\u65b9\u9762\u7684\u8aaa\u660e\uff0c\u8acb\u898b\u76f8\u95dc\u8aaa\u660e\u6587\u4ef6\u3002<br/>\u66f4\u591a MTA \u53ef\u4fe1\u7db2\u7d61\u5728\u8a2d\u5b9a\u65b9\u9762\u7684\u8aaa\u660e\uff0c\u8acb\u898b <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
@@ -2684,3 +2691,11 @@ ERROR_InvalidRPLifetime = \u7bc4\u570d\u5fc5\u9808\u70ba\u4e00\u500b\u6b63\u6574
 ERROR_RPExists = \u539f\u5247 "{0}" \u5df2\u5b58\u5728\u3002
 multiple_servers = \u591a\u500b\u4f3a\u670d\u5668
 
+Two_Factor_Authentication = \u96d9\u56e0\u6578\u8a8d\u8b49
+LBL_Two_Step_Authentication = \u5169\u6b65\u8a8d\u8b49
+LBL_Enable_Two_Factor_Authentication = \u555f\u7528\u96d9\u56e0\u6578\u8a8d\u8b49
+LBL_Two_Factor_Authentication_Active = \u73fe\u7528
+LBL_Require_Two_Step_Authentication = \u9808\u9032\u884c\u5169\u6b65\u8a8d\u8b49
+LBL_Number_Of_One_Time_Codes = \u9700\u7522\u751f\u7684\u4e00\u6b21\u6027\u4ee3\u78bc\u6578\ufe55
+MSG_Number_Of_One_Time_Codes = \u9700\u7522\u751f\u7684\u4e00\u6b21\u6027\u4ee3\u78bc\u6578
+LBL_Enable_Application_Passcodes = \u555f\u7528\u61c9\u7528\u7a0b\u5f0f\u5bc6\u78bc
