--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -485,6 +485,7 @@ OVP_related = \u76f8\u95dc
 OVP_recent = \u6700\u8fd1\u7269\u4ef6
 OVP_allSearchResult = \u6240\u6709\u7d50\u679c
 OVP_accountSearchResult = \u5e33\u6236
+OVP_aliasSearchResult = \u5225\u540d
 OVP_domainSearchResult = \u7db2\u57df
 OVP_searchOption = \u641c\u5c0b\u9078\u9805
 OVP_savedSearch = \u5132\u5b58\u7684\u641c\u5c0b
@@ -691,15 +692,14 @@ Alert_MoreResultsAvailable = \u627e\u5230\u7684\u7d50\u679c\u8d85\u904e {0} \u98
 Alert_ServerDetails = \
 	 <b>\u9644\u8a3b:</b>\u500b\u5225\u4f3a\u670d\u5668\u7684\u8a2d\u5b9a\u503c\u5c07\u8986\u5beb\u5168\u57df\u8a2d\u5b9a\u3002
 Alert_GlobalConfig = \
-	 <b>\u9644\u8a3b:</b> \
-	\u8a2d\u5b9a\u503c\u50c5\u9069\u7528\u65bc\u5df2\u5b89\u88dd\u4e26\u555f\u7528\u9069\u7576\u670d\u52d9\u9805\u76ee\u7684\u4f3a\u670d\u5668\u3002\
-	\u4f3a\u670d\u5668\u7684\u8a2d\u5b9a\u503c\u5c07\u8986\u5beb\u5168\u57df\u8a2d\u5b9a\u3002
+    <b>\u9644\u8a3b:</b> \
+    \u9019\u4e9b\u8a2d\u5b9a\u50c5\u9069\u7528\u65bc\u5df2\u5b89\u88dd\u6709\u9069\u7576\u670d\u52d9\u9805\
+\u4e26\u5df2\u555f\u7528\u76f8\u95dc\u670d\u52d9\u7684\u4f3a\u670d\u5668\u3002\u5957\u7528\u65bc\u4f3a\u670d\u5668\u3001\u7db2\u57df\u4ee5\u53ca\u670d\u52d9\u985e\u578b\u7684\u8a2d\u5b9a\u503c\u53ef\u53d6\u4ee3\u901a\u7528\u8a2d\u5b9a\u503c\u3002
 Alert_ServerRestart = \
 	<b>\u8b66\u544a\uff1a</b> \
 	\u5fc5\u9808\u91cd\u555f\u4f3a\u670d\u5668\uff0c\u8a2d\u5b9a\u8b8a\u66f4\u624d\u6703\u751f\u6548\u3002
 Alert_ProxyConfig = \
-	<b>\u9644\u8a3b:</b> \
-	\u50c5\u7576\u5b89\u88dd\u4e26\u555f\u7528 Proxy \u5f8c\uff0c\u624d\u53ef\u8a2d\u5b9a\u3002\u8a2d\u5b9a\u503c\u7684\u8b8a\u66f4\u9700\u8981\u91cd\u65b0\u555f\u52d5 Proxy \u624d\u80fd\u751f\u6548\u3002
+    <b>\u8b66\u793a\uff1a</b> \u5c0d\u9019\u4e9b\u8a2d\u5b9a\u503c\u7684\u8b8a\u52d5\uff0c\u9808\u5728 proxy \u4f3a\u670d\u5668\u91cd\u65b0\u555f\u52d5\u5f8c\u65b9\u80fd\u751f\u6548\u3002
 Alert_AmavisdRestart = \
 	<b>\u9644\u8a3b:</b> \
 	\u8a2d\u5b9a\u503c\u7684\u8b8a\u66f4\u9700\u8981\u91cd\u65b0\u555f\u52d5 amavisd \u624d\u80fd\u751f\u6548\u3002
@@ -862,7 +862,6 @@ NAD_Service_SNMP = SNMP
 NAD_Service_AntiVirus = \u9632\u6bd2
 NAD_Service_AntiSpam = \u53cd\u5783\u573e\u90f5\u4ef6
 NAD_Service_OpenDKIM = DomainKeys Identified Mail
-
 NAD_Service_Logger = \u8a18\u9304\u5668
 NAD_Service_Spell = \u62fc\u5b57\u6aa2\u67e5\u7a0b\u5f0f
 NAD_Service_Imapproxy = \u53cd\u5411 Proxy
@@ -1238,6 +1237,7 @@ NAD_MailOptions = \u90f5\u4ef6\u9078\u9805
 NAD_MailOptionsStandardClient = \u6a19\u6e96 (HTML) \u7528\u6236\u7aef
 NAD_ContactsOptions = \u9023\u7d61\u4eba\u9078\u9805
 NAD_CalendarOptions = \u884c\u4e8b\u66c6\u9078\u9805
+NAD_ChatOptions = \u804a\u5929\u529f\u80fd\u9078\u9805
 NAD_MailOptionsSending = \u6b63\u5728\u50b3\u9001\u90f5\u4ef6
 NAD_MailOptionsReceiving = \u6b63\u5728\u63a5\u6536\u90f5\u4ef6
 NAD_MailOptionsComposing = \u6b63\u5728\u64b0\u5beb\u90f5\u4ef6
@@ -1376,7 +1376,7 @@ NAD_zimbraSearchFeature = \u641c\u5c0b\u529f\u80fd
 LBL_zimbraFeatureNotebookEnabled = \u6587\u4ef6
 LBL_zimbraFeatureBriefcasesEnabled = \u516c\u4e8b\u5305
 LBL_zimbraFeatureHtmlComposeEnabled = HTML \u64b0\u7de8
-LBL_zimbraFeatureChatEnabled = \u5373\u6642\u901a
+LBL_zimbraFeatureChatEnabled = \u804a\u5929
 LBL_zimbraFeatureInstantNotify = \u5373\u6642\u901a\u77e5
 LBL_zimbraPrefIMAutoLogin = \u81ea\u52d5\u767b\u5165\u5230\u5373\u6642\u50b3\u8a0a\u670d\u52d9
 NAD_Feature = \u529f\u80fd: 
@@ -1500,6 +1500,7 @@ LBL_zimbraPrefUseTimeZoneListInCalendar = \u5728\u7d04\u6703\u6aa2\u8996\u4e2d\u
 LBL_zimbraPrefImapSearchFoldersEnabled = \u986f\u793a IMAP \u641c\u5c0b\u8cc7\u6599\u593e
 LBL_zimbraPrefMailForwardingAddress = \u4f7f\u7528\u8005\u6307\u5b9a\u7684\u8f49\u5bc4\u5730\u5740:
 LBL_zimbraPrefMailForwardingAddressMsg = \u4f7f\u7528\u8005\u6307\u5b9a\u7684\u8f49\u5bc4\u5730\u5740
+LBL_zimbraPrefChatPlaySound = \u64ad\u653e\u901a\u77e5\u97f3
 
 ERROR_missing_zimbraPrefMailForwardingAddress = \u9078\u64c7\u4e0d\u4fdd\u7559\u90f5\u4ef6\u7684\u672c\u6a5f\u526f\u672c\u6642\uff0c\u5fc5\u9808\u6307\u5b9a\u81f3\u5c11\u4e00\u500b\u8f49\u5bc4\u5730\u5740\u3002
 
@@ -1792,6 +1793,7 @@ ERROR_DL_NAME_INVALID = \u6307\u5b9a\u7684\u901a\u8a0a\u7fa4\u7d44\u6e05\u55ae\u
 ERROR_INVALID_VOLUME_PATH = \u6307\u5b9a\u7684\u78c1\u789f\u5340\u8def\u5f91\u7121\u6548!
 ERROR_NO_SUCH_VOLUME = \u6307\u5b9a\u7684\u78c1\u789f\u5340\u4e0d\u5b58\u5728!
 ERROR_VOLUME_ALREADY_EXISTS = \u6307\u5b9a\u7684\u78c1\u789f\u5340\u5df2\u5b58\u5728!
+ERROR_MAX_ACCOUNT_QUOTA = \u5e33\u6236\u9650\u984d\u7121\u6548\uff01\u5e33\u6236\u9650\u984d\u5df2\u8d85\u904e\u7db2\u57df\u7ba1\u7406\u54e1\u80fd\u70ba\u7528\u6236\u8a2d\u5b9a\u7684\u90f5\u4ef6\u6578\u91cf\u9650\u984d\u4e0a\u9650\u3002
 
 ERROR_LICENSE = \u6388\u6b0a\u51fa\u73fe\u554f\u984c 
 ERROR_NO_VALID_SUBNETS = \u932f\u8aa4! \u503c {0} \u4e0d\u662f\u6709\u6548\u7684\u5b50\u7db2\u8def\u6e05\u55ae\u3002\u5982\u9700\u6709\u95dc\u8a2d\u5b9a MTA \u4fe1\u4efb\u7db2\u8def\u7684\u8aaa\u660e\uff0c\u8acb\u53c3\u95b1\u8aaa\u660e\u6587\u4ef6\u3002<br/>\u6709\u95dc MTA \u4fe1\u4efb\u7db2\u8def\u8a2d\u5b9a\u7684\u8a73\u7d30\u8cc7\u8a0a\uff0c\u8acb\u53c3\u95b1 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
@@ -2772,3 +2774,11 @@ ERROR_InvalidRPLifetime = \u7bc4\u570d\u5fc5\u9808\u662f\u6b63\u6574\u6578\u3002
 ERROR_RPExists = \u539f\u5247\u300c{0}\u300d\u5df2\u5b58\u5728\u3002
 multiple_servers = \u591a\u500b\u4f3a\u670d\u5668
 
+Two_Factor_Authentication = \u96d9\u56e0\u6578\u8a8d\u8b49
+LBL_Two_Step_Authentication = \u5169\u6b65\u8a8d\u8b49
+LBL_Enable_Two_Factor_Authentication = \u555f\u7528\u96d9\u56e0\u6578\u8a8d\u8b49
+LBL_Two_Factor_Authentication_Active = \u73fe\u7528
+LBL_Require_Two_Step_Authentication = \u9808\u9032\u884c\u5169\u6b65\u8a8d\u8b49
+LBL_Number_Of_One_Time_Codes = \u9700\u7522\u751f\u7684\u4e00\u6b21\u6027\u4ee3\u78bc\u6578\ufe55
+MSG_Number_Of_One_Time_Codes = \u9700\u7522\u751f\u7684\u4e00\u6b21\u6027\u4ee3\u78bc\u6578
+LBL_Enable_Application_Passcodes = \u555f\u7528\u61c9\u7528\u7a0b\u5f0f\u5bc6\u78bc
