--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -33,6 +33,8 @@ label_html = HTML
 label_conversation = \u30b9\u30ec\u30c3\u30c9
 label_message = \u30e1\u30c3\u30bb\u30fc\u30b8
 
+label_always = \u5e38\u306b\u9001\u4fe1\u3059\u308b
+label_never = \u30c1\u30a7\u30c3\u30af\u3057\u306a\u3044
 label_prompt = \u30e1\u30c3\u30bb\u30fc\u30b8\u3092\u8868\u793a\u3059\u308b
 
 label_fontFamily_SansSerif = Sans Serif
